--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -31,11 +31,11 @@
 \vspace{10mm}
 \color{Prune}
 \fontfamily{cmss}\fontseries{m}\fontsize{22}{26}\selectfont
-Propriétés catalytiques à l'échelle nanométrique sondées par diffraction des rayons X de surface et imagerie de  diffraction cohérente.
+Catalytic properties at the nanoscale probed by surface x-ray diffraction and coherent diffraction imaging
 
 \normalsize
 \color{black}
-\Large{\textit{Catalytic properties at the nanoscale probed by surface x-ray diffraction and coherent diffraction imaging}}
+\Large{\textit{Propriétés catalytiques à l'échelle nanométrique sondées par diffraction des rayons X de surface et imagerie de diffraction cohérente.}}
 %*****************************************************
 
 \vspace{1.5cm}
@@ -44,13 +44,15 @@ Propriétés catalytiques à l'échelle nanométrique sondées par diffraction d
 
 \vspace{15mm}
 
-École doctorale n$^{\circ}$ 000, dénomination et sigle\\
+École doctorale n$^{\circ}$ 564, physique en Île-de-France (PIF)\\
 \small Spécialité de doctorat: Physique\\
-\footnotesize Unité de recherche: voir annexe\\
-\footnotesize Référent: : voir annexe\\
+\footnotesize Graduate School: Physique\\
+\footnotesize Unités de recherche: Synchrotron Soleil (Université Paris-Saclay)\\
+\footnotesize et CEA Grenoble
+% \footnotesize Référent: : COATI Alessandro\\
 \vspace{15mm}
 
-\textbf{Thèse présentée et soutenue à Paris,\\ le 19/12/2023, par}\\
+\textbf{Thèse présentée et soutenue à Paris-Saclay,\\ le 12/01/2024, par}\\
 \bigskip
 \Large {\color{Prune} \textbf{David SIMONNE}}
 
@@ -66,15 +68,15 @@ Propriétés catalytiques à l'échelle nanométrique sondées par diffraction d
 {\footnotesize \textbf{Composition du jury}}\\
 & \\
 \textbf{Andreas Stierle} & Rapporteur \\
-Professor, University of Hamburg / DESY & \\
+Professor, University of Hamburg / DESY, Hamburg & \\
 \textbf{Thomas Cornélius} & Rapporteur \\
-Directeur de recherche, IM2NP & \\
+Directeur de recherche, IM2NP, Marseille & \\
 \textbf{Dina Carbone} & Examinatrice \\
-Researcher, Lund University & \\
+Researcher, Lund University, Lund & \\
 \textbf{Sylvain Ravy} & Examinateur \\
-Directeur de recherche, LPS & \\
+Directeur de recherche, LPS, Orsay & \\
 \textbf{Virginie Chamard} & Examinatrice \\
-Directrice de recherche, Institut Fresnel & \\
+Directrice de recherche, Institut Fresnel, Marseille & \\
 
 \end{tabular} 
 
@@ -88,7 +90,7 @@ Dr., Synchrotron SOLEIL & \\
 \textbf{Andrea Resta} & Co-directeur \\
 Dr., Synchrotron SOLEIL & \\
 \textbf{Marie-Ingrid Richard} & Co-directrice \\
-Dr., CEA Grenoble & \\
+Directrice de recherche, CEA Grenoble & \\
 
 \end{tabular} 
 
