--- a/Sections/0_Acknowledgements.tex
+++ b/Sections/0_Acknowledgements.tex
@@ -1,11 +1,12 @@
 I extend my deepest gratitude to Andrea for his unwavering support throughout the duration of this thesis.
 You have contaminated me with your love of Linux and open source technology, and set a strong example in terms of commuting to work by bicycle, which I failed to follow in rainy and cold days.
+Thank you very much for all the feedback that you gave me about this thesis, down to the details in the figure placement, fontsize or linewidth, and sentence length.
 Pursuing your interest in the study of the ammonia oxidation has allowed me to explore a large subject.
-The subject of this work has given me a sense of purpose, as it feels like my contribution is ever so slightly adding to the global endeavor in combating global warming and climate change.
+This work has given me a sense of purpose, as it feels like my contribution is ever so slightly adding to the global endeavor in combating global warming and climate change.
 
-I am immensely grateful for the shared beamtimes, the camaraderie during strenuous long shifts in summer or winter, skipping breakfast or dinner, compiling data while observing the sample heater.
+I am immensely grateful for the shared beamtimes, the camaraderie during strenuous long shifts in summer or winter, skipping breakfast or dinner, compiling data while monitoring the sample heater.
 
-Thank you Alessandro for being engaged in everything you do, at work and outside, for taking care of all the tedious work so that I could have the best possible experience, for inviting me to have meals and sometimes bringing me home after work when the RER B was down, and for providing the SixS beamline with good italian coffee.
+Thank you Alessandro for being engaged in everything you do, at work and outside, for taking care of all the tedious work so that I could have the best possible experience, for inviting me to have meals and sometimes bringing me home after work, and for providing the SixS beamline with good italian coffee.
 
 Thank you Marie-Ingrid for being so driven by your love of science that everybody around wants to participate, for arranging my stay in Grenoble and bringing all of the padawans to conferences, for always being in a good mood and ready to discuss new challenging experiments.
 
@@ -13,25 +14,28 @@ Thank you to my three advisors for being good mentors, allowing me to teach, to 
 I have learned an incredible amount from each of you and particularly appreciated the beamtime at Diamond, during which the four of us collected many electrons, but also shared meaningful conversations around a pint of beer and delicious stew.
 
 I am very grateful to the research staff of SixS, to Alina and Yves for helping me when I was lost in the reciprocal space, to Benjamin without which none of the experiments could be possible, and to Michèle for her numerous advices.
-Thank you to all the young reseachers at SOLEIL for creating a group so that Saclay did not feel too remote and secluded.
+Thank you also Frédéric for spending a lot of time in helping us regarding BCDI and SXRD code development.
+Thank you to all the young researchers at SOLEIL for creating a group so that Saclay did not feel too remote and secluded.
 
 I of course have a specific thought for the Grenoble legions, half of whom I don't know half as well as I should like, and half of which I know from half my life spent in beamtime.
-Maxime, for introducing me to the world of political satire videos during the ammonia oxidation cycles at SixS; Corentin, for the delightful culinary explorations and for lending me the ID01 bicycle; Clément, for your constant positivity and our conversations about the promising future of PhD students; Nikita and Mattia, for the shared moments over a refreshing beer and the intense MSSBB games during Hercules; Ewen, for representing Bretagne alongside me; Edoardo, for the inception of LAN parties and the unforgettable Quake games; and Noor, for being an exceptional office mate in Grenoble.
+Maxime, for introducing me to the world of political satire videos during ammonia oxidation cycles at SixS; Corentin, for the delightful culinary explorations in Grenoble, and for lending me the ID01 bicycle; Clément, for your constant positivity and our conversations about the promising future of PhD students; Nikita and Mattia, for the shared moments over a refreshing beer and the intense MSSBB games during Hercules; Ewen, for representing Bretagne alongside me; Edoardo, for the initiative of LAN parties, and the unforgettable Quake games; and Noor, for being an exceptional office (and coffee) mate in Grenoble.
 
-I would also like to thank Steven for his good advice and for kind conversations, Tobias and Joël for facilitating my stay in Grenoble for a few months during this thesis.
-Thank you Vincent for letting me participate in the engaging ESRF tutorials, and Jérôme for starting the large work of bringing our community together.
+I would also like to thank Steven for his good advice and for kind conversations, as well as Tobias and Joël for facilitating my stay in Grenoble for a few months during this thesis.
+Thank you Vincent for letting me participate in the engaging ESRF tutorials, and Jérôme for starting the large work of bringing our BCDI community together in code development.
 My heartfelt appreciation to Sarah and Stéphane for their warm hospitality in Marseille and their engaging discussions.
+
+I feel very grateful towards Virginie and Christian who have followed me during the thesis by participating in the CSI, even available on weekends so that I would not miss registrations deadlines.
 
 Thank you Andrea, Davide, Elisa and all the others from the university of Torino for making me want to pursue an academic path.
 Thank you Davide again for hosting me in Grenoble after the ESRF user meeting because my train got cancelled, thank you Alessia and Giorgio for welcoming me.
 
-Thank you to all the MaMaSELF members without which I would never have studied material science and thus missed an amazing opportunity to study in many countries, discovering new cultures, and mindsets.
-Thank you Michael for bringing me to the world of neutron diffraction at Munich, and for letting me participate in my first beamtime at the ILL with Ulrike, a master and phd student that had to learn a lot fast, but sadly not fast enough to handle the beam polarisation well.
+Thank you to all the MaMaSELF members without which I would never have kept studiying physics and material science, and thus missed on studying in many countries, discovering new cultures, and mindsets.
+Thank you Michael for bringing me to the world of neutron diffraction at Munich, and for letting me participate in my first beamtime at the ILL with Ulrike, a master and PhD student that had to learn a lot fast, but sadly not fast enough to handle the beam polarisation well.
 
 Thank you to all the professors from Rennes that transmitted me their love of physics, especially Pr. Guérin that permitted me to study one year in Japan, thank you to Pr. Iwai for accepting me as part of his group in Sendaï.
 
-Finally, to my family, whose unwavering support has bolstered my every endeavor, to Lucas, whose shared passion for science has been a source of joy, and to my parents, for their trust and encouragement in my global pursuits.
-Thank you to all my friends that have seen me being projected in numerous states during those three years, without which I would probably not have kept the same level of sanity.
+Finally, to my family, whose unwavering support has bolstered my every endeavor, to Lucas, whose shared passion for science has been a source of motivation, and to my parents, for their trust and encouragement in my global pursuits.
+Thank you to all my friends that have seen me being projected in numerous states during those three years, and without which I would probably not have kept the same level of sanity.
 
 I extend my thanks to the esteemed members of the jury for their invaluable feedback and constructive critique, shaping the course of this work.
 
