--- a/Sections/2_Theory_Models/Introduction.tex
+++ b/Sections/2_Theory_Models/Introduction.tex
@@ -1,6 +1,8 @@
+\section{Introduction}
+
 Understanding the different mechanisms at play when photons interact with matter is of crucial importance to decide how to use x-rays as a probe in material science.
-Each phenomenon is at the source of different techniques (tab. \ref{tab:techniques} - fig. \ref{fig:TechniquesDataExamples}), scattering brings surface x-ray diffraction (SXRD) and Bragg coherent diffraction imaging (BCDI).
-Both techniques are used during this thesis, yielding complementary information about the sample structure.
+Different phenomena are at the source of different techniques (tab. \ref{tab:techniques} - fig. \ref{fig:TechniquesDataExamples}), e.g. scattering brings surface x-ray diffraction (SXRD) and Bragg coherent diffraction imaging (BCDI).
+Both techniques are used during this thesis, yielding complementary information about the sample atomic structure.
 
 X-ray absorption together with the photoelectric effect explained by Einstein in \cite*{Einstein1905} are at the origin of the third technique used during this work, x-ray photoelectron spectroscopy, sensitive to the chemical environment of the adsorbates present on the sample's surface.
 
@@ -8,13 +10,13 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
 \centering
 \resizebox{\textwidth}{!}{%
     \begin{tabular}{l|l|l|l}
-        Phenomena & Technique & Sample & Information \\
+        Phenomena & Technique used & Studied samples & Information \\
         \toprule
         Scattering & Bragg Coherent & Pt particles & Shape, 3D strain \\
         & Diffraction Imaging & (111), (110), (100), ... & and displacement \\
         & (BCDI) & & \\
         \midrule
-        Scattering & Surface x-ray & Pt single crystals & Roughness, relaxation \\
+        Scattering & Surface x-ray & Pt single crystals & Roughness, relaxation, atomic \\
         & Diffraction (SXRD) & (111), (100) & and crystallographic phases \\
         \midrule
         Absorption & X-ray Photoelectron & Pt single crystals & Species presence, \\
@@ -33,8 +35,9 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
     \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sxrd_data/Pt100/maps/Map_hkl_surf_or_2227-2283_not_patched.png}
     \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/xps_data/transition_xps.png}
     \caption{
-    2D diffraction pattern collected using BCDI (left), and reciprocal space in-plane map collected using SXRD (middle) at the SixS beamline (SOLEIL synchrotron).
-    Ambient pressure XPS spectra measured during a transition between two atmospheres (\argon  and \dioxygen), collected using XPS (right) at the B07 beamline (Diamond synchrotron).
+    Left: 2D diffraction pattern collected using BCDI at the SixS beamline (SOLEIL synchrotron)
+    Middle: reciprocal space in-plane map collected using SXRD at the SixS beamline.
+    Right: near ambient pressure XPS spectra measured during a transition between two atmospheres (\argon  and \dioxygen), collected using XPS at the B07 beamline (Diamond synchrotron).
     }
     \label{fig:TechniquesDataExamples}
 \end{figure}
