--- a/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
+++ b/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
@@ -1,9 +1,7 @@
-\subsection{Nanoparticle structure evolution during ammonia oxidation at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}}\label{sec:BCDIAmmoniaOxidation}
+\subsection{particle structure evolution during ammonia oxidation at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}}\label{sec:BCDIAmmoniaOxidation}
 
-Nanoparticle \textit{A} being not stable during the oxidation of ammonia at \qty{600}{\degreeCelsius}, the reaction was measured using BCDI at lower temperatures before and after the catalyst light off, respectively \qty{300}{\degreeCelsius}, and \qty{400}{\degreeCelsius}.
-
-The same sample, experimental setup, type of measurements and phase retrieval algorithms were used as detailed in the previous section.
-Two nanoparticles were identified on the substrate \textit{via} sample mapping, first measured at room temperature under inert argon atmosphere.
+particle \textit{A} being unstable on the substrate during the oxidation of ammonia at \qty{600}{\degreeCelsius}, the reaction was measured at lower temperatures before and after the catalyst light off, respectively \qty{300}{\degreeCelsius}, and \qty{400}{\degreeCelsius}.
+Two nanoparticles were identified on the substrate, first measured at room temperature under inert argon atmosphere.
 
 The support of particle \textit{B} (fig. \ref{fig:B7Facets}) was well determined at room temperature, exhibiting a round shape with a total of 30 facets.
 Approximately \qty{76}{\percent} of the particle surface voxels were recognised to belong to facets.
@@ -14,16 +12,16 @@ Approximately \qty{76}{\percent} of the particle surface voxels were recognised 
     \includegraphics[width=0.32\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/reconstructions/vti_good_files/B7/RT/RT_010_B7.png}
     \includegraphics[width=0.32\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/reconstructions/vti_good_files/B7/RT/RT_001_B7.png}
     \caption{
-        Surface of the reconstructed nanoparticle B at \qty{25}{\degreeCelsius} under inert argon atmosphere.
+        Surface of the reconstructed particle B at \qty{25}{\degreeCelsius} under inert argon atmosphere.
         The surface is coloured by the values of the heterogeneous out-of-plane strain as described in eq. \ref{eq:StrainTensorzz} at each surface voxel, the limit of each facet is delimited by thick white lines.
     }
     \label{fig:B7Facets}
 \end{figure}
 
 About \qty{10.5}{\percent} of the particle surface is covered by \{100\} facets, \qty{23.1}{\percent} by \{110\} facets, \qty{35.2}{\percent} by \{111\} facets, and \qty{7.3}{\percent} by \{113\} facets.
-The particle has a round shape, with a diameter equal to \qty{300}{\nm}.
+The particle has a round shape, with a diameter of \qty{300}{\nm}.
 
-From the 3D representation of the particle in fig. \ref{fig:B7Facets}, the existence of the ($3\bar{1}1$) and ($\bar{1}13$) facets seem to be highly probable when considering the symmetry of the particle.
+From the 3D representation of the particle in fig. \ref{fig:B7Facets}, the existence of the ($3\bar{1}1$) and ($\bar{1}13$) facets seem to be highly probable when considering the symmetry and shape of the particle.
 Those facets could not be detected by the recognition algorithm, probably due to a lack of spatial resolution, necessary to detect the smallest facets on the particle.
 
 In contrast with particle \textit{B}, the support of particle \textit{C} could not be determined at room temperature, parts of the particle systematically missing from the reconstructions.
@@ -38,30 +36,30 @@ The particle \textit{C}, shown in fig. \ref{fig:D6Facets}, was thus first recons
     \includegraphics[width=0.32\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/reconstructions/vti_good_files/D6/300/300_ammonia_010.png}
     \includegraphics[width=0.32\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/reconstructions/vti_good_files/D6/300/300_ammonia_001.png}
     \caption{
-        Surface of the reconstructed nanoparticle C at \qty{300}{\degreeCelsius} under a partial pressure of ammonia equal to \qty{10}{\milli\bar}.
+        Surface of the reconstructed particle C at \qty{300}{\degreeCelsius} under a partial pressure of ammonia equal to \qty{10}{\milli\bar}.
         The surface is coloured by the values of the heterogeneous out-of-plane strain as described in eq. \ref{eq:StrainTensorzz} at each surface voxel, the limit of each facet is delimited by thick white lines.
     }
     \label{fig:D6Facets}
 \end{figure}
 
-Particle \textit{B} exhibits a more rectangular shape without any \{113\} facets, \qty{10.8}{\percent} of its surface is covered by six \{100\} facets, \qty{6.4}{\percent} by \{110\} facets, and \qty{36.3}{\percent} by \{111\} facets.
+Particle \textit{C} exhibits a more rectangular shape without any \{113\} facets, \qty{10.8}{\percent} of its surface is covered by six \{100\} facets, \qty{6.4}{\percent} by \{110\} facets, and \qty{36.3}{\percent} by \{111\} facets.
 The particle is at the largest \qty{800}{\nm} wide.
 Only \qty{53.4}{\percent} of the surface voxels were determined to belong to facets, there is for example a large area between the (111) and ($1\bar{1}1$) facets (fig \ref{fig:D6Facets} - left) that could correspond to the missing (101) facet.
-Compared to particle \textit{C}, the area between the (100)-type facets and ($\bar{1}1\bar{1}$)-type facets is clearly determined, and not expected to contains higher index facets.
+Compared to particle \textit{B}, the area between the (100)-type facets and ($\bar{1}1\bar{1}$)-type facets is clearly determined, and not expected to contains higher index facets.
 
-The two nanoparticles have a very different shape and surface structure, resumed in tab. \ref{tab:FacetCoverage}.
+The two nanoparticles have a very different shape and facet coverage, resumed in tab. \ref{tab:FacetCoverage}.
 The percentage of the total surface area covered by \{100\} and \{111\} facets is similar (respectively about \qty{10}{\percent} and \qty{36}{\percent}).
 The largest difference in the \{110\} facet coverage can be partially explained by the non-detection of the (101) facet.
-Most importantly, the large nanoparticle does not exhibit high Miller index facets.
+Most importantly, the large particle does not exhibit high Miller index facets.
 
 \begin{table}[!htb]
     \centering
     \begin{tabular}{@{}llllll@{}}
     \toprule
-    Facet Type & \{100\} & \{110\} & \{111\} & \{113\} & None \\
+    Facet Type & \{100\} & \{110\} & \{111\} & \{113\} & Undefined \\
     \midrule
-    Particle B & 0.105 (6) & 0.231 (9) & 0.352 (8) & 0.073 (7) & 0.239 \\
-    Particle C & 0.108 (6) & 0.064 (8) & 0.363 (8) & 0 & 0.465 \\
+    Particle B & \qty{10.5}{\percent} (6) & \qty{23.1}{\percent} (9) & \qty{35.2}{\percent} (8) & \qty{7.3}{\percent} (7) & \qty{23.9}{\percent} \\
+    Particle C & \qty{10.8}{\percent} (6) &  \qty{6.4}{\percent} (8) & \qty{36.3}{\percent} (8) & \qty{0}{\percent}       & \qty{46.5}{\percent} \\
     \bottomrule
     \end{tabular}%
     \caption{
@@ -70,13 +68,13 @@ Most importantly, the large nanoparticle does not exhibit high Miller index face
     \label{tab:FacetCoverage}
 \end{table}
 
-Together with nanoparticle \textit{A}, this results shows that the sample used during this experiment is covered with many different nanoparticles that all together contribute to the catalytic activity, and probably show an even greater variance of shape and size.
-The current analysis using BCDI can only aim to reveal the structure variation during a catalytic reaction of a few selected nanoparticles.
+Together with particle \textit{A}, this results shows that the sample used during this experiment is covered with many different nanoparticles that all together contribute to the catalytic activity, and probably show an even greater variance of shape and size.
+The current analysis using BCDI aim to reveal the structure variation during a catalytic reaction of a few selected nanoparticles.
 Statistically representing the population on the sample is impossible, the measurement process being currently too time consuming to probe more than a few nanoparticles.
 
 The ammonia oxidation cycle was started at \qty{300}{\degreeCelsius}, with the introduction of ammonia.
-The different atmospheres used to probe the relation between nanoparticle structure and selectivity have been introduced in tab. \ref{tab:ConditionsNanoparticles}.
-A maximum of three scans were recorded under each condition (tab. \ref{tab:ConditionsNanoparticles}) at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} for each nanoparticle to probe for any evolution of the particles surface structure during a fixed atmosphere as a function of time, and to otherwise demonstrate the reproducibility of the measurements.
+The different atmospheres used to probe the relation between particle structure and selectivity have been introduced in tab. \ref{tab:ConditionsNanoparticles}.
+A maximum of three scans were recorded under each condition (tab. \ref{tab:ConditionsNanoparticles}) at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} for each particle to probe for any evolution of the particles surface structure during a fixed atmosphere as a function of time, and to otherwise demonstrate the reproducibility of the measurements.
 
 A 3D view of the reconstructed nanoparticles at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} during the ammonia oxidation cycle is presented in appendix \ref{app:AppendixB7}.
 The surface is coloured by the values of the heterogeneous out-of-plane strain as described previously in eq. \ref{eq:StrainTensorzz} at each surface voxel.
@@ -86,13 +84,13 @@ Both the retrieved displacement and strain fields are represented with their res
 \subsubsection{Particle B}
 
 A different behaviour during the oxidation of ammonia was observed on both nanoparticles.
-Particle \textit{B}, which is smaller and thus scatters more weakly than particle $C$, was difficult to reconstruct once the temperature increased to \qty{300}{\degreeCelsius}.
+Particle \textit{B}, which is smaller and thus scatters less than particle \textit{C}, was difficult to reconstruct once the temperature increased to \qty{300}{\degreeCelsius}.
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/bcdi_data/B7/hist_B7.pdf}
     \caption{
-        Histograms of normalised Bragg electronic density amplitude.
+        Histograms of normalised Bragg electronic density amplitude, for particle \textit{B}.
         Values below 0.05 are ignored since they typically belong to voxels located far away from particle support.
         The difference between bulk, surface, and voxels outside the support is smeared out in b).
     }
@@ -185,7 +183,7 @@ The particle shape is not reversible at \qty{400}{\degreeCelsius} after the oxid
 \end{SCfigure}
 
 Two main phenomena of interest must be kept in mind from the evolution of the interplanar spacing in fig. \ref{fig:B7Latpara}, besides the expected increase of the lattice parameter from the increase of temperature, verified in the previous section.
-First there a very important increase (\qty{0.08}{\percent}) of the homogeneous strain following the introduction of ammonia at \qty{300}{\degreeCelsius}.
+First there is a \qty{0.08}{\percent} increase of the homogeneous strain following the introduction of ammonia at \qty{300}{\degreeCelsius}.
 The interplanar spacing stays approximately equal to the same value afterwards during the ammonia oxidation cycle.
 Secondly, there is an increase of about \qty{0.02}{\percent} of the homogeneous strain at \qty{400}{\degreeCelsius} when the ammonia to oxygen ratio reaches the value of one.
 Both of these phenomena are observed at conditions for which changes in the FWHM are also seen.
@@ -222,8 +220,7 @@ The strain field energy shows very little evolution at \qty{300}{\degreeCelsius}
 However, the values of the strain field energy are observed to increase under reacting conditions at \qty{400}{\degreeCelsius}, multiplied approximately by \num{3} when the \ce{O_2}/\ce{NH_3} ratio is equal to 1, and by \num{9} when the \ce{O_2}/\ce{NH_3} ratio is equal to 8.
 This result is consistent with the evolution of the different FWHM in fig. \ref{fig:B7FWHM} and with the 3D shape of the particle.
 
-To summarise, the introduction of ammonia at \qty{300}{\degreeCelsius} has resulted in (i) a slight increase of the in-plane strain, observed from the evolution of the peak FWHM in the $\vec{q}_x$ and $\vec{q}_y$ directions in fig. \ref{fig:B7FWHM}.
-(ii) a large increase of the homogeneous strain, observed from the value of the $d_{111}$ interplanar spacing in fig. \ref{fig:B7Latpara}, which was not reversed after the removal of ammonia following the end of the oxidation cycle.
+To summarise, the introduction of ammonia at \qty{300}{\degreeCelsius} has resulted in (i) a slight increase of the in-plane strain, observed from the evolution of the peak FWHM in the $\vec{q}_x$ and $\vec{q}_y$ directions in fig. \ref{fig:B7FWHM}; in (ii) a large increase of the homogeneous strain, observed from the value of the $d_{111}$ interplanar spacing in fig. \ref{fig:B7Latpara}, which was not reversed after the removal of ammonia following the end of the oxidation cycle.
 These changes can be linked to the first reduction of the particle, previously only exposed to air and argon, since such changes are not observed at \qty{400}{\degreeCelsius}.
 No changes in the particle strain and structure as a function of the ammonia to oxygen ratio could be detected at \qty{300}{\degreeCelsius}.
 
@@ -278,7 +275,7 @@ Interestingly, the diffraction pattern after the removal of both gases in the re
 In general, the fringes are less visible in all direction, especially in the ($\vec{q}_x$, $\vec{q}_y$) plane, areas of higher intensity also appeared around the Bragg peak.
 Most importantly, the coherence fringes situated in the [111] direction, \textit{i.e.} along $\vec{q}_z$ show a completely different pattern, as if two CTRs were on top of each other, one with larger rectangular fringes, while the other one has smaller round fringes.
 The particle clearly suffered a change of shape after the removal of the reacting gases, meaning that different phenomena before and after the oxidation cycle impinge on the reconstruction quality.
-It is possible that the first exposition to ammonia has has the effect of reducing the particle that was beforehand only exposed to air and argon.
+It is possible that the first exposition to ammonia has the effect of reducing the particle that was beforehand only exposed to air and argon.
 Thus, removing ammonia and oxygen at the end of the cycle can yield a different state than before the oxidation cycle.
 
 The same kind of diffraction patterns are observed at \qty{400}{\degreeCelsius} after heating under argon as in fig. \ref{fig:D6Ortho} (c), and after the introduction of ammonia as in fig. \ref{fig:D6Ortho} (b), meaning that the presence of \ce{NH_3} in the reactor lowers the strain in the particle, which can then easily be reconstructed.
@@ -335,9 +332,9 @@ The original mass spectrometer signal as a function of time is available in the 
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/gas_analysis/figures/product_comparison.pdf}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/gas_analysis/figures/product_comparison_no_norm.pdf}
     \caption{
-        Evolution of reaction product partial pressures during the BCDI experiment on the patterned sample containing Pt[111]||Al$_2$O$_3$[0001] nanoparticles, at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}.
+        Evolution of reaction product partial pressures during the BCDI experiment on the patterned sample containing Pt nanoparticles, at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}.
         Mean partial pressures during \qty{1}{\minute} at the end of each condition, recorded from a leak in the reactor output.
         The pressure under \qty{49}{\ml\per\min} of argon and \qty{1}{\ml\per\min} of ammonia has been subtracted.
     }
