--- a/Sections/3_Results_Nanoparticles/Conclusion.tex
+++ b/Sections/3_Results_Nanoparticles/Conclusion.tex
@@ -1,20 +1,18 @@
 \section{Discussion}
 
 % Particle A, Temp ramp
-The reshaping of a Pt nanoparticle (particle \textit{A}) during heating from \qty{125}{\degreeCelsius} to \qty{600}{\degreeCelsius} under an inert gas flow was put into evidence.
+The reshaping of a Pt particle (particle \textit{A}) during heating from \qty{125}{\degreeCelsius} to \qty{600}{\degreeCelsius} under an inert gas flow was put into evidence.
 An important evolution in the type of facets present near the particle interface with the substrate was reported as a function of the sample temperature (fig. \ref{fig:AmaterasuFacetsEvolution}).
-An interfacial dislocation was successfully removed by temperature treatment, yielding a defect free interface until the introduction of ammonia at \qty{600}{\degreeCelsius}, which induced the appearance of a dislocation network (fig. \ref{fig:AmaterasuA}, \ref{fig:AmaterasuB})
-
+An interfacial dislocation was successfully removed by temperature treatment (fig. \ref{fig:AmaterasuA}), yielding a defect free interface until the introduction of ammonia at \qty{600}{\degreeCelsius}, which induced the appearance of a dislocation network (fig. \ref{fig:AmaterasuB}).
 The importance of the metal-support interactions for catalysis was demonstrated for smaller nanoparticles (below \qty{4}{\nm}) in a general study by van Deelen et al. \parencite*{vanDeelen2019}.
 In the current study, the importance of taking into account the presence of interfacial strain was also highlighted with particle \textit{A} (fig. \ref{fig:AmaterasuStrain}), similarly to other BCDI studies of catalytic reactions.
 For example, Kim et al. \parencite*{Kim2021} have measured different strain evolution for \{111\} facets depending on their orientation with the \ce{SrTiO_3} substrate (\ce{CO} oxidation, Pt-Rh nanoparticles, \qty{100}{\nm} large).
 Similar conclusions have been reached by Dupraz et al. \parencite*{Dupraz2022}, also during the oxidation of \ce{CO} with Pt nanoparticles (\qty{300}{\nm} large particle).
 The relative facet size can also have an impact on the facet strain.
 Both effects could not be de-correlated in this study since facets of same structure but different orientation, \textit{i.e.} (1$\bar{1}$1) and ($\bar{1}$1$\bar{1}$), have different sizes, whereas facets of same orientation have similar sizes (e.g. (1$\bar{1}$1)-type facets in fig. \ref{fig:AmaterasuStrain1675}).
-
-Particle \textit{A} exhibited a symmetric shape only at \qty{450}{\degreeCelsius} (fig. \ref{fig:AmaterasuFacetsEvolution}), isolated \{110\} \{212\} and \{211\} facets were otherwise detected.
+Particle \textit{A} exhibited a symmetric shape only at \qty{450}{\degreeCelsius} (fig. \ref{fig:AmaterasuFacetsEvolution}), isolated \{110\}, \{221\} and \{211\} facets were otherwise detected.
 A reconstruction at a higher temperature (\qty{600}{\degreeCelsius}) showed a hole in the Bragg electronic density near the particle substrate (fig. \ref{fig:AmaterasuB}).
-The evolution of the lattice parameter as a function of the temperature (fig. \ref{fig:AmaterasuHomoStrain}) shows that nanoparticles do not follow the same thermal relaxation curves when in the presence or not of interfacial defects, having an impact on the strain field.
+The evolution of the lattice parameter as a function of the temperature (fig. \ref{fig:AmaterasuHomoStrain}) shows that nanoparticles do not follow the same thermal relaxation curves when in the presence of interfacial defects, having an impact on the strain field.
  % as expected from literature values, which is probably due to an important surface/volume ratio, \textit{i.e.} surface energy minimisation processes \parencite{Winterbottom1967, Boukouvala2021}, having an impact on the strain field.
 
 % Ammonia ox
@@ -22,41 +20,43 @@ The oxidation of ammonia has been extensively studied by the means of surface te
 Since BCDI is still a recent technique first applied to catalysis less than 10 years ago \parencite{Ulvestad2016}, no comparative measurements could be found during the presence of ammonia or nitrogen based species.
 
 % Particle A
-The introduction of ammonia in the reactor at \qty{600}{\degreeCelsius} was linked to an inversion of the average facet strain for particle \textit{A} (fig. \ref{fig:AmaterasuFacetsEvolution}), together with the appearance of a dislocation network at the interface with the substrate (fig. \ref{fig:AmaterasuB}).
+The introduction of ammonia in the reactor at \qty{600}{\degreeCelsius} was linked to an inversion of the average facet strain for particle \textit{A} (fig. \ref{fig:AmaterasuStrain}), together with the appearance of a dislocation network at the interface with the substrate (fig. \ref{fig:AmaterasuB}).
 Facets of the same structure, size, and distance from the substrate showed similar strain state (fig. \ref{fig:AmaterasuStrain}).
-It is possible that a strong adsorption of ammonia induced such a modification of the strain field that the appearance of a dislocation network was provoked.
+It is possible that a strong adsorption of nitrogen species induced such a modification of the strain field that the appearance of a dislocation network was provoked.
 Indeed, no other variation of particle shape, or appearance of dislocation was observed without a change of temperature.
 Time-resolved measurements of the dynamics of the dislocation network as well as adsorption/desorption cycles could bring additional information supporting this hypothesis.
-
-The influence of the introduction of oxygen at \qty{600}{\degreeCelsius} could not be probed due to the loss of particle \textit{A}, which detached from the substrate.
+The influence of the introduction of oxygen at \qty{600}{\degreeCelsius} could not be probed due to the loss of particle \textit{A}.
 The high temperature reached by the nano catalyst during the exothermic oxidation of ammonia \parencite{Hatscher2008} could have resulted in a loss of quality of the epitaxial relationship with the substrate.
 
+% now speak of the two other nanoparticles
 Two additional particles, namely \textit{B} and \textit{C}, were measured at both \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, respectively before and after the activation temperature expected from the characterisation of the catalyst shown in fig. \ref{fig:TempRamps}.
+The two particles have different shape, facet coverage, and initial strain state.
+They show different structural evolution during ammonia oxidation.
 
 % Particle C
 The introduction of ammonia at \qty{300}{\degreeCelsius} can be linked to a global decrease of the heterogeneous strain in particle \textit{C}, whose surface consists exclusively of \{111\}, \{110\} and \{100\} facets (tab. \ref{tab:FacetCoverage}).
 This effect is visible from the decrease of the strain field energy in fig. \ref{fig:D6SFE}, the return to a symmetrical diffraction pattern in fig. \ref{fig:D6Ortho}, and the decrease of the FWHM in all three directions in fig. \ref{fig:D6FWHM}.
-The opposite (same) effect was observed after removing (introducing) ammonia from the reactor at \qty{300}{\degreeCelsius} (\qty{400}{\degreeCelsius}), supporting the hypothesis of a nitrogen-rich (\ce{NH_x}, \ce{N}) adsorption/desorption induced hysteresis cycle on the particle surface.
-The mechanism of such a cycle could correspond to a decrease of the surface strain magnitude by adsorption, thus relaxing the particle bulk by removing nano defects present to accommodate the high surface strain.
+The opposite (same) effect was observed after removing (introducing) ammonia from the reactor at \qtylist{300;400}{\degreeCelsius}, supporting the hypothesis of a nitrogen species (\ce{NH_x}, \ce{N}) adsorption/desorption induced cycle on the particle surface.
+The mechanism of such a cycle could correspond to a decrease of the surface strain by adsorption, propagating into the particle bulk.
+% by removing nano defects present to accommodate the high surface strain.
 Such a scenario implies changes in the surface strain when introducing ammonia, which are not visible since the reconstruction of the measurements performed under inert atmosphere do not converge towards a well defined support.
-% The introduction of ammonia at \qty{600}{\degreeCelsius} when measuring particle \textit{A} has had the opposite effect, \textit{i.e.} the creation of a dislocation network.
-% However, both particles have different shape and facet coverage, which can be linked to different behaviour as highlighted in this study.
-
-The absence of change in the facet strain following the introduction of oxygen and during the oxidation of ammonia can be due to different phenomena.
-
-First, the change in the facet strain is too small to be detected due to the low spatial resolution of the experiment, meaning that it is damped by being averaged with \textit{bulk} layers.
+The introduction of ammonia at \qty{600}{\degreeCelsius} when measuring particle \textit{A} has had the opposite effect, \textit{i.e.} the creation of a dislocation network.
+The absence of change in the facet strain following the introduction of oxygen and during the oxidation of ammonia can be due to different reasons.
+First, the change in the facet strain is too small to be detected with the low spatial resolution of the experiment, meaning that it is damped by being averaged with \textit{bulk} layers.
 For example, oxygen adsorption induced strain on the Pt terminated \{100\} and \{111\} facets has been simulated to be null \qty{8}{\nm} away from the surface in the bulk \parencite{Kim2021}.
-
-Secondly, there is no change of facet strain following the introduction of oxygen, which could be interpreted by nitrogen-rich species being so strongly adsorbed on the particle surface that they do no participate in the catalytic reaction.
-If this was indeed the case, it would mean that all three types of facets are poisoned at a \ce{NH_3} pressure equal to \qty{6}{\milli\bar}, showing a remarkably strong adsorption on many different atomic sites.
+However, Dupraz et al \parencite*{Dupraz2022} have shown in a higher resolution experiment that reaction-induced changes in the facet strain can propagate over the bulk of the particle.
+Changes in surface strain are thus expected to be possible to measure even with a lower resolution.
+Secondly, there is no change of facet strain following the introduction of oxygen, which could be interpreted by nitrogen species being so strongly adsorbed on the particle surface that they do no participate in the catalytic reaction.
+If this was indeed the case, it would mean that all three types of facets are poisoned at a \ce{NH_3} pressure equal to \qty{6}{\milli\bar}, showing a remarkably strong adsorption on many different atomic sites, and preventing catalytic activity on this nanoparticle.
 A strong evolution of particle \textit{A} was also observed under the sole presence of ammonia at \qty{600}{\degreeCelsius}, with the main structural differences being the absence of \{110\} facets (fig. \ref{fig:AmaterasuFacetsEvolution}), and a dislocation network at the interface (fig. \ref{fig:AmaterasuB}).
-
 Thirdly, the oxidation of ammonia at ambient pressure does not involve the adsorption of oxygen on the catalyst surface, functioning \textit{via} an Eley-Rideal mechanism \parencite{Rideal1939}, the production of \ce{NO} and \ce{N_2O} happening by the reaction of gas-phase oxygen with nitrogen adsorbed species.
 The surface strain would then not be expected to evolve during change of atmospheres.
-This finding would be in contradiction with literature finding that have proved the importance of prior atomic \ce{O} and \ce{OH} coverage for the de-hydrogenation process of \ce{NH_3}, during a largely accepted Langmuir-Hinshelwood reaction mechanism \parencite{Bradley1995, Mieher1995,vandenBroek1999, Kim2000}.
-The pre-exposition of the particle to ammonia would prevent this mechanism and thus the production of \ce{N_2}, \ce{NO} and \ce{NO_2}.
+However, this would be in contradiction with literature finding that have proved the importance of prior atomic \ce{O} and \ce{OH} coverage for the de-hydrogenation process of \ce{NH_3}, during a largely accepted Langmuir-Hinshelwood reaction mechanism \parencite{Bradley1995, Mieher1995,vandenBroek1999, Kim2000}.
+The pre-exposition of the particle to ammonia would prevent this mechanism, and thus the production of \ce{N_2}, \ce{NO} and \ce{NO_2}.
+XPS results detailed in the next chapter have also highlighted the importance of adsorbed oxygen in the reaction mechanism.
+Moreover, a transition was observed in the homogeneous strain for particle \textit{C} at \qty{300}{\degreeCelsius} when first achieving reacting condition (fig. \ref{fig:D6Latpara}, up by \qty{0.07}{\percent}, not reproduced at \qty{400}{\degreeCelsius}).
 
-Moreover, a transition was observed in the homogeneous strain for particle \textit{C} at \qty{300}{\degreeCelsius} when introducing oxygen in the reactor (fig. \ref{fig:D6Latpara}, up by \qty{0.07}{\percent}), which was not reproduced at \qty{400}{\degreeCelsius}.
+% say difficult to conclude ?
 
 % Particle B
 Particle \textit{B}, which exhibits \{113\} facets on its surface at room temperature in addition to \{111\}, \{110\} and \{100\} facets (tab. \ref{tab:FacetCoverage}), follows a different structural evolution during the experiment.
@@ -64,37 +64,32 @@ The surface coverage of \{110\} facets is also four times higher than for partic
 Heating the sample to \qty{300}{\degreeCelsius} has decreased the visible presence of facets on the particle surface.
 While particle \textit{C} observes a large decrease of heterogeneous strain during the introduction of ammonia, particle \textit{B} suffers both a large increase of homogeneous strain with respect to the room temperature lattice parameter (fig. \ref{fig:B7Latpara}, up by \qty{0.09}{\percent}), together with an increase of the in-plane heterogeneous strain (fig. \ref{fig:B7FWHM}).
 This effect is not reversible when removing ammonia from the reactor at \qty{300}{\degreeCelsius}, nor it is observed again when introducing ammonia at \qty{400}{\degreeCelsius}.
-It is possible to link this effect to the particle first exposition to reducing atmosphere after argon and air.
+It is possible to link this phenomenom to the particle first exposition to reducing atmosphere after argon and air.
 The absence of strain evolution in the same condition for particle \textit{C} (fig. \ref{fig:D6Latpara}) can be attributed to different surface states under argon from contaminants/oxides, linked to different facet coverage.
-
 The introduction of oxygen slightly decreases the heterogeneous strain in the particle (fig. \ref{fig:B7FWHM}), the in-plane heterogeneous strain is stable during the oxidation of ammonia while the out-of-plane heterogeneous strain increases slightly.
 Thus, small changes are already visible at \qty{300}{\degreeCelsius} for particle \textit{B} during the oxidation of ammonia.
-
-The most impressive evolution occurs at \qty{400}{\degreeCelsius}, with the appearance of a defect in the particle, characterised by a second peak in the 3D scattered intensity, shifted in $\vec{q}_y$ with respect to the Bragg peak (fig. \ref{fig:B7Ortho}).
-The influence of the defect in both the heterogeneous (fig. \ref{fig:B7FWHM}, fig. \ref{fig:B7SFE}) and homogeneous strain (fig. \ref{fig:B7Latpara}) is clear once the ratio between \ce{O_2}/\ce{NH_3} ratio is equal to one, an atmosphere under which a non reversible increase of homogeneous and heterogeneous strain is observed.
+The most impressive evolution for particle \textit{B} occurs at \qty{400}{\degreeCelsius}, with the appearance of a defect, characterised by a second peak in the 3D scattered intensity, shifted in $\vec{q}_y$ with respect to the Bragg peak (fig. \ref{fig:B7Ortho}).
+The influence of the defect in both the heterogeneous (fig. \ref{fig:B7FWHM}, fig. \ref{fig:B7SFE}) and homogeneous strain (fig. \ref{fig:B7Latpara}) is clear once the \ce{O_2}/\ce{NH_3} ratio is equal to one, a non reversible increase of homogeneous and heterogeneous strain is observed.
 Indeed, if the defect appeared during the increase of temperature to \qty{400}{\degreeCelsius}, the particle shape and strain state seems to be stable until specific reaction conditions are achieved.
 To safely link defect dynamics and catalytic activity, several oxidation cycles would have to be measured, as well as an exposition of the particle to progressive amount of oxygen.
 Nevertheless, it can safely be said that the evolution of particle \textit{B} seems to follow the reported activation and reconstruction process of industrial catalyst by defects reported by Hannevold et al. \parencite*{Hannevold2005}.
 
 % Compare oxidation with literature
-The exposition of platinum nanoparticles epitaxied on glassy carbon to oxygen at \qty{200}{\degreeCelsius} has been probed by Fernandez et al. \parencite*{Fernandez2019}, shown to be linked with an \qty{0.09}{\percent} homogeneous tensile expansion of the particle in the [111] direction, linked to the formation of platinum surface oxides.
+The exposition of platinum nanoparticles epitaxied on glassy carbon to oxygen at \qty{200}{\degreeCelsius} has been probed by Fernandez et al. \parencite*{Fernandez2019}, shown to be linked with an \qty{0.09}{\percent} homogeneous tensile expansion of the particle in the [111] direction, attributed to the formation of platinum surface oxides.
 The nanoparticles were not exposed to oxygen without ammonia during this experiment.
 Nevertheless, a similar expansion was observed on particle \textit{C} but during reacting conditions, and only at \qty{300}{\degreeCelsius} (fig. \ref{fig:D6Latpara}, up by \qty{0.07}{\percent}).
 Further increasing the oxygen pressure at \qty{300}{\degreeCelsius} did not have a significant effect on the homogeneous strain.
 The increase of strain on particle \textit{B} under reacting conditions in not reversible when removing the reagents, and not observed at \qty{400}{\degreeCelsius}.
 This means that if oxides have grown under reacting conditions at \qty{300}{\degreeCelsius}, they are stable throughout the experiment, and not removed by the sole presence of ammonia at \qty{400}{\degreeCelsius}.
-The questions on Pt nanoparticles remains, do platinum oxides grow on the sample surface, and are they stable under reacting conditions ?
+Questions on Pt nanoparticles remain, do platinum oxides grow on the sample surface, and are they stable under reacting conditions?
 Future experiments on single crystals will yield completing information to answer this question.
-Moreover, a different behaviour is observed for particle \textit{B}, for which the homogeneous strain does not evolve with oxygen at \qty{300}{\degreeCelsius} (fig. \ref{fig:D6Latpara}), which would necessarily link the growth of surface oxides to the nanoparticle shape, facet coverage, and initial strain state.
-
+Moreover, a different behaviour is observed for particle \textit{B}, for which the homogeneous strain does not evolve with oxygen at \qty{300}{\degreeCelsius} (fig. \ref{fig:D6Latpara}), which would necessarily link the growth of surface oxides to the particle shape, facet coverage, and initial strain state.
 Kim et al. \parencite*{Kim2018} have also shown that the introduction of oxygen was followed by its adsorption on edge sites, visible by magnitude changes in the neighbouring displacement field.
 Their hypothesis could be at the origin of different nano catalyst reshaping phenomena measured during the oxidation of \ce{CO} \textit{via} SXRD \parencite{Nolte2008, Hejral2016}, TEM \parencite{Vendelbo2014} and also other BCDI studies \parencite{Abuin2019}.
-
 No reshaping of the particles \textit{B} or \textit{C} was observed during the study of the ammonia oxidation with BCDI.
 However, a global reshaping of the nanoparticles was revealed by SXRD at \qty{600}{\degreeCelsius} under reacting conditions favouring oxygen rich products, \{113\} and \{110\} facets being replaced by \{100\} and \{111\} facets for which the CTR intensity increased.
 This reshaping was not detected at lower temperatures, no decrease of the [1$\bar{1}$3] oriented CTR could be identified at \qty{300}{\degreeCelsius} or \qty{500}{\degreeCelsius}, meaning that the \{113\} facets present at room temperature on particle \textit{B} may yet still exist at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}.
 % A more detailed analysis of the 3D scattered intensity around the (111) Bragg peak may reveal if the particle has effectively lost the \{113\} facets or not.
-
 A particle with a similar shape to that of particle \textit{B} was measured by Dupraz et al. \parencite*{Dupraz2022}, \{113\} facets are still visible during the presence of oxygen in the cell.
 The spatial resolution of the experiment is much higher than in the present study, due to the very high brilliance of Petra III in comparison with other $3^{rd}$ generation synchrotrons \parencite{Bilderback2005}.
 %Interestingly, they have also shown a different behaviour when exposing the catalyst to oxygen for the third time, after some \ce{CO} oxidation cycles.
@@ -104,46 +99,71 @@ No such relaxation was observed during this experiment, which supports that the 
 % Defects
 The presence of steps/surface defects on Pt(111) facets has been shown to increase the catalytic activity of Pt nanoparticles \parencite{Segner1984, Chen2012}.
 Indeed, defects have an impact of the local strain field, which can in turn influence the adsorption properties of molecules taking part in the reaction.
-During the oxidation of ammonia, defects could play a role in the step-by-step de-hydrogenation process of ammonia on the catalyst surface, e.g. favouring \ce{NO} desorption, and thus influencing the catalyst selectivity.
-
-Similarly to our results on nanoparticle \textit{B}, Kim et al. \parencite*{Kim2019} have measured the defect dynamics on a Pt nanoparticle during the catalytic methane oxidation.
-They have shown a reversible transition of the particle shape induced by the adsorption of oxygen at \qty{425}{\degreeCelsius} (no indication of the oxygen partial pressure), no such transition was observed at \qty{325}{\degreeCelsius}.
+% During the oxidation of ammonia, defects could play a role in the step-by-step de-hydrogenation process of ammonia on the catalyst surface, e.g. favouring \ce{NO} desorption, and thus influencing the catalyst selectivity.
+Similarly to our results on particle \textit{B}, Kim et al. \parencite*{Kim2019} have measured the defect dynamics on a Pt particle during the catalytic methane oxidation.
+They have shown a reversible transition of the particle shape induced by the adsorption of oxygen at \qty{425}{\degreeCelsius}
+%(no indication of the oxygen partial pressure)
+, no such transition was observed at \qty{325}{\degreeCelsius}.
 A second peak has been observed in the diffraction pattern in the $\vec{q}_z$ direction, \qty{10}{\minute} after the introduction of oxygen, which is accompanied by an increase of the strain field energy, and the presence of defects in the particle.
-
 Two main differences are noted in the current study, first a defect seems to appear on particle \textit{B} when \textit{heating} the sample up to \qty{400}{\degreeCelsius}, and not during reacting conditions.
 Secondly, the transformation of the particle shape is not reversible upon removal of the reactants.
-The reaction product partial pressures can be seen to drop in the minutes following the return to inert atmosphere at \qty{400}{\degreeCelsius} (fig. \ref{fig:RGA400BCDINanoparticles}), which shows that the sample has stopped its catalytic activity.
+The reaction product partial pressures can be seen to drop in the minutes following the return to inert atmosphere at \qty{400}{\degreeCelsius} (fig. \ref{fig:RGA400BCDINanoparticles}).
+%, which shows that the sample has stopped its catalytic activity.
 From the evolution of the strain field energy, the lattice parameter, and the FWHM, it is likely that the magnitude of the defect appearing at \qty{400}{\degreeCelsius} under inert atmosphere has been increased from the reaction, which irreversibly transformed the particle shape.
 Defect dynamics have also been reported during the catalytic oxidation of \ce{CO} on Pt nanoparticles \parencite{Carnis2021b} using BCDI.
-
-These result tend to support the importance of defects in the catalytic activity of nanoparticles during the oxidation of ammonia.
-The defect introduced by heating at \qty{400}{\degreeCelsius} has probably altered the adsorption properties of particle \textit{B}, possibly creating steps on top of nanoparticle surface.
+These results tend to support the importance of defects in the catalytic activity of nanoparticles during the oxidation of ammonia.
+The defect introduced by heating at \qty{400}{\degreeCelsius} has probably altered the adsorption properties of particle \textit{B}, possibly creating steps on top of particle surface.
 Interestingly the change in the particle strain field is only visible after a certain \ce{O_2}/\ce{NH_3} ratio is reached (fig. \ref{fig:B7SFE}, \ref{fig:B7FWHM}), which can be linked to a transition to the adsorption of oxygen rich species (e.g. \ce{NO}, \ce{N_2O}) on the catalyst surface.
-The reproducibility of the result at \qty{300} and \qty{400} for particle \textit{B} for the same exposition time allow us to safely rule out the possibility of beam induced structural changes in particle \textit{B}.
+The reproducibility of the result at \qtylist{300;400}{\degreeCelsius} for particle \textit{C} for the same exposition time allow us to safely rule out the possibility of beam induced structural changes in particle \textit{C}.
 
 % RGA
-Reaction products were detected at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} (fig. \ref{fig:RGANanoparticlesBCDIComparison}), overall an oxygen favoured \ce{O_2}/\ce{NH_3} ratio resulted in a higher proportion of \ce{NO} and \ce{N_2O}, which enabled us to probe the relationship between strain and catalyst selectivity.
+Reaction products were detected at \qtylist{300;400}{\degreeCelsius} (fig. \ref{fig:RGANanoparticlesBCDIComparison}), overall an oxygen favoured \ce{O_2}/\ce{NH_3} ratio resulted in a higher proportion of \ce{NO} and \ce{N_2O}, which enabled us to probe the relationship between strain and catalyst selectivity.
 Interestingly, an \textit{activation} of the sample was observed at both \qty{300}{\degreeCelsius} (fig. \ref{fig:RGA300BCDINanoparticles}) and \qty{400}{\degreeCelsius} (fig. \ref{fig:RGA400BCDINanoparticles}) when \ce{O_2}/\ce{NH_3} = 2.
 No such effect was observed at \qty{300}{\degreeCelsius} in the previous experiment when using the non-patterned sample during surface x-ray diffraction (fig. \ref{fig:RGASXRDNanoparticlesComparison}).
 The only difference in the history of both samples being that the patterned sample was exposed to reacting conditions at \qty{600}{\degreeCelsius} for approximately \qty{1}{\hour} before this experiment.
 This transition in the product partial pressures when \ce{O_2}/\ce{NH_3} = 2 does not correspond to the condition at which particle \textit{B} showed a transition in terms of strain field energy or FWHM at \qty{400}{\degreeCelsius}, which occurred under an equal amount of ammonia and oxygen in the reactor (\ce{O_2}/\ce{NH_3} = 1).
 This structural transition could be a precursor to the \textit{activation} process, keeping in mind that, as underlined by this experiment, the large difference in shape of the nanoparticles on the sample implies different structural evolution under various atmospheres.
 
-% conclude
-To conclude, it is of utmost importance to probe different nanoparticles before drawing a conclusion regarding their global behaviour during a heterogeneous catalytic reaction.
-The importance of the particle shape, \textit{i.e.} facet size, coverage as well as initial strain state was put into perspective by the study of the oxidation of ammonia at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, as a function of the ratio between \ce{O_2} and \ammonia.
+\subsubsection{Summary}
 
-The presence of defect in particle \textit{B} was linked to an evolution of the particle strain state and shape once an oxygen rich atmosphere was reached in the reactor, favouring the production of \ce{NO} and \ce{N_2O} over \ce{N_2}
+SXRD measurements have unveiled the $\alpha$-\ce{Al_2O_3}(0001)-$\begin{pmatrix} \sqrt{3} & 0\\ 0 & \sqrt{3} \end{pmatrix}$-R\ang{30} epitaxial relationship between the Pt nanoparticles and the substrate.
+The Pt nanoparticles exhibit distinct in-plane orientations, with their c-axis aligning along the [111] direction.
+Notably, during ammonia oxidation, no change of the epitaxial relationship between the particles and the substrate has been observed.
+
+In our ensemble-averaged SXRD experiment on the Pt particle assembly, we have demonstrated that the particles are highly faceted, showing both low and high-index facets: \{100\}, \{110\}, \{111\} and \{113\} facets.
+Interestingly, reshaping of the particles occurs at \qty{600}{\degreeCelsius}, and depends on the gas conditions.
+Reacting conditions favour \{111\} and \{001\} facets over \{110\}- and \{113\}-type facets.
+The catalyst light-off temperatures for the production of \ce{N2}, \ce{NO} and \ce{N2O} are \qtylist{300;450;550}{\degreeCelsius}, respectively.
+Selectivity analysis in the temperature range of \qtyrange{300}{600}{\degreeCelsius} reveals a preference for \ce{N2} over \ce{NO} and \ce{N2O}, except at \qty{600}{\degreeCelsius} and high oxygen partial pressures.
+
+Bragg coherent diffraction imaging was employed on individual Pt nanoparticles to investigate the role of single particles and the structure/activity of each facet during the ammonia oxidation.
+The structure, including morphology, out-of-plane displacement and strain fields of three single particles (\textit{A}, \textit{B} and \textit{C}) have been imaged.
+
+Particle \textit{A} has been used to follow the effect of thermo-elasticity between the particle and its substrate.
+A flash annealing of the particle at \qty{800}{\degreeCelsius} allowed to remove the initial dislocation located at the particle-substrate interface.
+During thermal annealing under inert atmosphere (Ar), an important reshaping of the particle has been observed between \qtylist{250;350}{\degreeCelsius}, demonstrating the mobility of the Pt atoms at a rather low temperature.
+At \qty{600}{\degreeCelsius}, facets of same structure (e.g. \{111\}) but at different distances with the interface experience opposite strain variation, suggesting an influence of support strain on the particle.
+Interestingly, flowing \ce{NH3} at \qty{600}{\degreeCelsius} induced an inversion of the out-of-plane strain at each facet, and the formation of a dislocation network at substrate interface.
+As the particle was not stable during the oxidation of ammonia at \qty{600}{\degreeCelsius} (possibly linked to the existence of the dislocation network), two other particles have been measured at lower temperatures: \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, before and after the temperature light off.
+
+The two other particles, \textit{B} and \textit{C}, show a different morphology (size, aspect ratio and types of facets), particle \textit{C} is for example not covered by \{113\} facets.
+They show as well different behaviours during the oxidation of ammonia.
+Defects arise in particle \textit{B} while increasing the temperature to \qty{400}{\degreeCelsius} under inert atmosphere.
+Strong changes in strain heterogeneity and strain energy are observed for the small particle during the oxidation reaction at 400°C, while very weak changes occur for the large particle.
+These results tend to support the importance of defects in the catalytic activity of nanoparticles during the oxidation of ammonia, and warrants for monitoring multiple particles during reaction to obtain meaningful statistics.
 It is possible that the transformation of particle \textit{B} corresponds to the onset of activation and reconstruction observed in industrial samples, driven by the appearance of defects.
 Moreover, this behaviour could be connected to a more global behaviour of the nanoparticles present on the sample from the visible transition in terms on product pressure visible in the RGA.
 
-Particle \textit{C} has a completely different behaviour, showing no strain evolution during the catalytic reaction, possibly from an initial strain state that lead to strongly adsorbed species not participating in the catalytic activity.
+Particle \textit{C} has a completely different behaviour, showing no strain evolution during the catalytic reaction, possibly from an initial strain state that leads to strongly adsorbed species not participating in the catalytic activity.
 
-This experiment has confirmed the importance of initial strain states for heterogeneous catalysis and will push forward nanoparticle strain engineering.
+To conclude, it is of utmost importance to probe different nanoparticles before drawing a conclusion regarding their global behaviour during a heterogeneous catalytic reaction.
+The importance of the particle shape, \textit{i.e.} facet size, coverage as well as initial strain state was put into perspective by the study of the oxidation of ammonia at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, as a function of the ratio between \ce{O_2} and \ce{NH3}.
+
+This experiment has confirmed the importance of initial strain states for heterogeneous catalysis and will push forward particle strain engineering.
 The possibility of having different phenomena occurring under the same reacting conditions was revealed.
 
 Finally, this experiment has both demonstrated the value and limits of Bragg coherent diffraction imaging when studying heterogeneous catalytic reactions.
 The recent improvement of the instrumental setup (rocking curves performed in fly mode instead of step-by-step mode, sample scanning in Bragg conditions to find the nanoparticles, sapphire window in the dome) tend in the right direction.
-The planned upgrade of SOLEIL to a $4^{th}$ generation synchrotron will also play a key role in the hierarchy of SixS in the very competitive list of coherent imaging beamlines, the current resolution of the experiment being too low to properly resolve the smallest facets present of the particles, to distinguish between facets with similar orientations,to observe the growth of surface oxides or the strain in the topmost atomic layers.
+The planned upgrade of SOLEIL to a $4^{th}$ generation synchrotron will also play a key role in the hierarchy of SixS in the very competitive list of coherent imaging beamlines, the current resolution of the experiment being too low to properly resolve the smallest facets present of the particles, to distinguish between facets with similar orientations, to observe the growth of surface oxides or the strain in the topmost atomic layers.
 
 In order to have a better understanding of surface dependent effects on the catalyst selectivity, and to probe for the possible growth of surface oxide during similar oxygen pressures, specific facets have been measured by SXRD, presented in the next chapter.
