--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -2,7 +2,7 @@
 
 % Reaction
 During the catalytic oxidation of ammonia, Pt catalysts were first used when aiming at the production of nitrogen oxide for the Ostwald process, Pt-Rh catalysts have then proven to be more effective since the 1920s \parencite{Handforth1934, Heck1982}.
-Recently, the ammonia oxidation reaction over a \ce{Pt_{25}Rh_{75}}(001) single crystal was studied with a surface science approach, by combining operando techniques such as near-ambient pressure X-ray photoemission spectroscopy (NAP-XPS) and surface x-ray diffraction (SXRD) with mass spectrometry \parencite{Resta2020a}.
+Recently, the ammonia oxidation reaction over a \ce{Pt_{25}Rh_{75}}(001) single crystal was studied with a surface science approach, by combining \textit{operando} techniques such as near-ambient pressure X-ray photoemission spectroscopy (NAP-XPS) and surface x-ray diffraction (SXRD) with mass spectrometry \parencite{Resta2020a}.
 It was shown that \ce{NO} production coincides with significant changes of the surface structure, and the formation of a \ce{RhO_2} surface oxide.
 Moreover, changes in the surface relaxation related to the catalyst selectivity were reported.
 
@@ -26,19 +26,19 @@ As seen in the previous chapter, surfaces give rise to crystal truncation rods (
 The average nanoparticle shape and structure will be probed by studying the intensity of crystal truncation rods in directions perpendicular to the expected facets on the nanoparticle surface.
 Prior experiments with similar samples \parencite{Dupraz2017, Li2020, Lim2021, Dupraz2022} have shown that the particles exhibit a Winterbottom shape \parencite{Winterbottom1967, Boukouvala2021}, typical of nanoparticles epitaxied on a substrate, with mainly \{111\}, \{110\}, and \{100\} facets, and a [111] orientation perpendicular to the substrate.
 
-By having the incident beam illuminating multiple particles, the CTR signals in e.g. the [111] direction is the sum of the contribution from the [111] facet of every illuminated nanoparticle (as well as their [$\bar{1}\bar{1}\bar{1}$] facets).
+By having the incident beam illuminating multiple particles, the CTR signals in e.g. the [111] direction is the sum of the contribution from the (111) facet of every illuminated nanoparticle (as well as their ($\bar{1}\bar{1}\bar{1}$) facets).
 Therefore, phenomena inducing structural change such as particle re-faceting/reshaping at a given condition are expected to be visible by an evolution of the different CTR.
 
 % bcdi
 With Bragg coherent diffraction imaging (BCDI), the individual three-dimensional (3D) structural response of \textit{isolated} nanoparticles to changes in the gas mixtures will be measured under reacting conditions.
 The same reaction conditions will be used in both experiments.
-\textit{Operando} analysis of the nanoparticles properties (size, shape, strain, re-faceting, support interaction, oxide formation, etc.) are essential to better understand their behaviour during the catalytic reaction.
+\textit{Operando} analysis of the nanoparticles properties (size, shape, strain, re-faceting, support interaction, oxide formation, \textit{etc}.) are essential to better understand their behaviour during the catalytic reaction.
 
 However, it must first be ensured that the nanoparticles do not move, or change their epitaxial relationship with the substrate during the oxidation reaction.
 Indeed, in a BCDI experiment, the beam is reduced to micrometric size, and nanoparticles movements will prevent good quality measurements.
 Thus, the SXRD experiment will also aim at resolving the evolution of the epitaxial relationship between the Pt nanoparticles and the \ce{Al_2O_3} substrate.
 
-\subsection{$\alpha-$\ce{Al_2O_3} supported Pt nanoparticles synthesis}\label{sec:PtParticles}
+\subsection{$\alpha$-\ce{Al_2O_3} supported Pt nanoparticles synthesis}\label{sec:PtParticles}
 
 The platinum nanoparticles were grown by the Israel Institute of Technology (Technion, collaboration with Dr. Eugene Rabkin).
 A first use is showcased in the work by Dupraz et al. \parencite*{Dupraz2017}.
@@ -47,9 +47,9 @@ Two different samples are used in this thesis.
 To obtain a more important scattered intensity with SXRD, the first sample's surface is homogeneously covered with Pt particles, \qtyrange{100}{1000}{\nm} large.
 For the second sample, a mask is applied during the lithographic process route to ensure that the platinum layer transforms to isolated nanoparticles (fig. \ref{fig:Mask}), thereby avoiding alien signal coming from neighbouring nanoparticles with BCDI.
 The second sample is also called \textit{patterned} sample.
-Dewetting is obtained by annealing at \qty{1100}{\degreeCelsius} for \qty{30}{\minute}, that also guarantees a good recrystallisation of the particle.
+Dewetting is obtained by annealing at \qty{1100}{\degreeCelsius} for \qty{24}{\hour}, that also guarantees a good re-crystallisation of the particle.
 
-In the patterned sample, single nanoparticles in the middle of squares (fig. \ref{fig:Mask}).
+In the patterned sample, single nanoparticles are located in the middle of squares (fig. \ref{fig:Mask}).
 The position of the squares is designated with Arabic numbers (row), letters (column) and Roman numbers (large rectangle).
 All of the position indicators are constituted of platinum nanoparticle as well, which allows the mapping of the sample's surface in Bragg condition to find the nanoparticles' positions (fig. \ref{fig:SampleMapping}).
 
@@ -90,12 +90,12 @@ To fit on the (0001) sapphire surface, the platinum atoms at the interface are e
 \subsection{Catalysis reactor for near-ambient pressure \textit{operando} studies}
 
 The catalytic activity of the platinum nanoparticles was first studied as a function of the temperature to (i) be certain that the sample is sufficiently catalytically active for the reaction products to be detected by the mass spectrometer, (ii) identify the catalyst light-off temperature and (iii) observe an evolution of the product selectivity as a function of the temperature.
-Similar scans where also performed on the empty reactor/sample holder to ensure the absence of activity towards the ammonia oxidation.
+Similar scans were also performed on the empty reactor/sample holder to ensure the absence of activity towards the ammonia oxidation.
 
 The heater was calibrated by measuring the sample temperature at different pressures, with a type K thermocouple, as a function of the current intensity (fig. \ref{fig:TempRamps} - a).
 \qty{10}{\minute} separate consecutive datapoints to ensure the heater stability.
 % The experimental data points were fit to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} when working under vacuum, or at ambient pressure (\qty{0.3}{\bar} or \qty{0.5}{\bar} of \ce{Ar}).
-The thermal conductivity of the gases involved in the oxidation of ammonia are in the similar order of magnitude (tab. \ref{tab:ThermalConductivity}).
+The thermal conductivity of the gases involved in the ammonia oxidation are in the similar order of magnitude (tab. \ref{tab:ThermalConductivity}).
 Moreover, the same inert gas used to set the reactor pressure - Argon - is used as a carrier gas during the experiments, constituting at least \qty{80}{\percent} of the gas flow, and allowing us to assume that the temperature in the reaction chamber is well approximated.
 
 \begin{table}[!htb]
@@ -157,11 +157,11 @@ The different gas conditions used at each temperature are resumed in tab. \ref{t
     \midrule
     1 & 50 & 0 & 0 & 300 & 300 & 0 & 0 & Catalyst state without reactants (unactive) \\
     2 & 49 & 0 & 1 & 300 & 294 & 0 & 6 & Ammonia adsorption \\
-    3 & 48.5 & 0.5 & 1 & 300 & 291 & 3 & 6 &  \multirow{4}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio on the \\ catalyst selectivity and structure \end{tabular}}\\
-    4 & 48 & 1 & 1 & 300 & 288 & 6 & 6 &  \\
+    3 & 48.5 & 0.5 & 1   & 300 & 291 & 3 & 6 &  \multirow{4}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio on the \\ catalyst selectivity and structure \end{tabular}}\\
+    4 & 48 & 1 & 1 & 300 & 288 & 6  & 6 &  \\
     5 & 47 & 2 & 1 & 300 & 282 & 12 & 6 &  \\
-    6 & 41 & 8 & 1 & 300 & 276 & 18 & 6 & \\
-    7 & 50 & 0 & 0 & 300 & 300 & 0 & 0 & Returning to pristine state \\
+    6 & 41 & 8 & 1 & 300 & 276 & 48 & 6 & \\
+    7 & 50 & 0 & 0 & 300 & 300 & 0  & 0 & Returning to pristine state \\
     \bottomrule
     \end{tabular}%
 }
