--- a/Sections/4_Results_SingleCrystals/Conclusion.tex
+++ b/Sections/4_Results_SingleCrystals/Conclusion.tex
@@ -1,65 +1,66 @@
 \section{Discussion}
 
-In this chapter was presented the structural and chemical evolution of Pt(111) and Pt(100) single crystals during ammonia oxidation.
-The pre-oxidation of the platinum surfaces under \qty{80}{\milli\bar} of oxygen has allowed the identification of different surface reconstructions and oxides.
-
 %%%%%%%%%%%%%%%% high oxygen%%%%%%%%%%%%%%%%
 % oxides Pt(111)
-For Pt(111), a Pt(111)-p(8x8)-R\ang{0} arrangement was measured (fig. \ref{fig:MapsPt111A} - d), preceded by two Pt(111)-p(6x6)-R\ang{\pm 8.8} structures (without second order peaks) (fig. \ref{fig:MapsPt111A} - c).
-Some of the peaks belonging to the rotated structure can also be described with the following matrix notation: Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0}, effectively describing a unit cell with a second order peak (fig. \ref{fig:MapsPt111A} - c).
-The Pt(111)-p(8x8)-R\ang{0} was linked to the known $\alpha$-\ce{PtO_2} surface oxide from the magnitude of the lattice parameter and comparison with literature reports under comparable atmospheres.
-Out-of-plane measurements have shown that the Pt(111)-p(8x8)-R\ang{0} structure is compatible with a bi- or tri-layer structure (fig. \ref{fig:LScans80}), whereas the other peaks are more linked to monolayers (fig. \ref{fig:LScans80} - app. \ref{fig:LScans05}).
+In this chapter was presented the structural and chemical evolution of Pt(111) and Pt(100) single crystals during ammonia oxidation.
+The pre-oxidation of the platinum surfaces under \qty{80}{\milli\bar} of oxygen has allowed the identification of different surface structures and reconstructions.
+For Pt(111), a Pt(111)-p(8x8)-R\ang{0} commensurate superstructure was measured (fig. \ref{fig:MapsPt111A} - d), preceded by two Pt(111)-p(6x6)-R\ang{\pm 8.8} commensurate superstructures (no visible second order peak, fig. \ref{fig:MapsPt111A} - c).
+Some of the peaks belonging to the rotated structures can also be described with the following matrix notation: Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0}, effectively describing a unit cell with a second order peak (fig. \ref{fig:MapsPt111A} - c).
+Out-of-plane measurements have revealed a bi- or tri-layer structure (fig. \ref{fig:LScans80}), possibly corresponding to a $\alpha$-\ce{PtO_2} surface oxide.
+The Pt(111)-p(6x6)-R\ang{\pm 8.8} structures have been linked to monolayers (fig. \ref{fig:LScans80} - app. \ref{fig:LScans05}).
 The complete understanding of the out-of-plane structures will be the subject of additional work.
-A precursor relation was hypothesised between the Pt(111)-p(6x6)-R\ang{\pm 8.8} structures and Pt(111)-p(8x8)-R\ang{0} by time-resolved diffraction studies, under a lowered oxygen atmosphere (fig. \ref{fig:HexBraggPeaks}).
-The importance of the partial pressure of oxygen in the growth kinetics are have also been highlighted.
+A precursor relation was hypothesised between the Pt(111)-p(6x6)-R\ang{\pm 8.8} and Pt(111)-p(8x8)-R\ang{0} structures by time-resolved diffraction studies, under a lowered oxygen atmosphere (fig. \ref{fig:HexBraggPeaks}).
+The importance of the partial pressure of oxygen in the growth kinetics has also been highlighted.
 
 % oxides Pt(100)
 On Pt(100), a bulk \ce{Pt_3O_4} oxide was identified during exposure to \qty{80}{\milli\bar} of oxygen (fig. \ref{fig:MapsPt100A} - b, fig. \ref{fig:FitPt100LScans}), but not under \qty{5}{\milli\bar} (fig. \ref{fig:MapsPt100D}), which shows the importance of the total pressure on the growth of \ce{Pt_3O_4}.
-\ce{Pt_3O_4} follows a Pt(100)-p(2x2)-R\ang{0} arrangement on the Pt(100) surface (app. \ref{fig:Pt3O4onPt100}).
+\ce{Pt_3O_4} follows a Pt(100)-p(2x2)-R\ang{0} epitaxial relationship with the Pt(100) surface (fig. \ref{fig:Pt3O4onPt100}).
 A second family of peaks was measured under high oxygen pressure (fig. \ref{fig:MapsPt100A} - b), slightly shifted in H or K with respect to the \ce{Pt_3O_4} peaks measured at $L=0$.
 The shift was determined to depend on the elapsed time under oxygen atmosphere, two values were measured, $\delta_{H,K}=0.07$ and $\delta_{H,K}=0.09$, respectively after \qty{3}{\hour} (fig. \ref{fig:MapsPt100A} - b) and \qty{1}{\hour} (fig. \ref{fig:MapsPt100B} - b) of measurement.
 No clear unit cell could be associated to the shifted peaks, the related out-of-plane signal is compatible with the existence of a monolayer on the Pt(100) surface (fig. \ref{fig:LScansHighOxygenPt100}).
-Transient structures were observed at low oxygen pressures, which disappeared in the second measurement after \qty{5}{\hour} of elapsed time (fig. \ref{fig:MapsPt100D}).
+Transient structures were observed at low oxygen pressure, which disappeared in the second measurement after \qty{5}{\hour} of elapsed time (fig. \ref{fig:MapsPt100D}).
 
 % CTR
-The measurement of crystal truncation rods revealed more important intensity changes on the Pt(100) surface (fig. \ref{fig:CTRPt100}) in comparison the Pt(111) surface during the oxidation cycle (fig. \ref{fig:CTRPt111}).
-For both surfaces (fig. \ref{fig:CTRFit111} - a, \ref{fig:CTRFit100} - a), the maximal roughness value was found during exposition to high oxygen atmosphere, consistent with the formation of surface oxides under oxygen pressure.
+The measurement of crystal truncation rods revealed more important intensity changes on the Pt(100) surface (fig. \ref{fig:CTRPt100}) in comparison with the Pt(111) surface during the oxidation cycle (fig. \ref{fig:CTRPt111}).
+For both surfaces (fig. \ref{fig:CTRFit111} - a, \ref{fig:CTRFit100} - a), the maximal roughness value is reached during exposition to high oxygen atmosphere, consistent with the formation of oxides under oxygen pressure.
 Out-of-plane surface strain on Pt(111) was estimated to be contained on the topmost atomic layer, the presence of surface oxide structures was associated with compressive strain with respect to the initial values under argon atmosphere (fig. \ref{fig:CTRFit111} - b).
-The influence of bulk \ce{Pt_3O_4} grown on Pt(100) under high oxygen atmosphere on the surface strain could not be estimated, a lower oxygen atmosphere was related to compressive out-of-plane strain.
+The influence of bulk \ce{Pt_3O_4} grown on Pt(100) under high oxygen atmosphere on the surface strain was not yet estimated, a lower oxygen atmosphere was related to compressive out-of-plane strain.
 \ce{Pt_3O_4} was shown to not grow in a homogeneous layer, but rather in terms of islands with different heights (fig. \ref{fig:CTRFitHighOxygen}).
 
 % XPS
 The XPS experiment was conducted at similar oxygen to ammonia ratio, but with a decreased total pressure.
 The highest oxygen pressure reached during the XPS experiment is \qty{8.8}{\milli\bar}, in the same order of magnitude as the low oxygen pressure condition for SXRD (\qty{5}{\milli\bar}).
-Adsorbed oxygen and hydroxyl groups were identified by XPS on both surfaces (fig. \ref{fig:O1sN1sPt111}, \ref{fig:O1sN1sPt100}) during this condition, as well as under reduced oxygen pressure (\qty{0.55}{\milli\bar}).
+Adsorbed oxygen was identified by XPS on both surfaces during this condition (fig. \ref{fig:O1sN1sPt111}, \ref{fig:O1sN1sPt100}), as well as under reduced oxygen pressure (\qty{0.55}{\milli\bar}).
+The normalised intensity of the related peaks is approximately three times higher on the Pt(100) surface compared to the Pt(111) surface, which shows that the Pt(100) surface is more easily oxidised than the Pt(111) surface.
 The duration of the high oxygen condition of Pt(111) was not long enough to enable the growth of the Pt(111)-(8x8)-R\ang{0} structure if dynamics at \qty{8.8}{\milli\bar} can be translated to \qty{5}{\milli\bar} (\qty{23}{\hour} vs. \qty{5}{\hour}).
-Therefore, only the Pt(111)-(6x6)-R\ang{0} structure is expected to yield an additional peak in the O 1s and Pt 4f levels, additional peaks of low intensity were effectively identified in the Pt 4f level (fig. \ref{fig:Pt4fPt111}).
-Interestingly, a third peak between \ce{OH_a} and \ce{O_a} was identified for Pt(100), which could be linked to the presence of the transient structures measured with SXRD under \qty{5}{\milli\bar} of oxygen (fig. \ref{fig:MapsPt100D}).
-A large peak was also measured in the Pt 4f level at \qty{71.8}{\eV} (fig. \ref{fig:Pt4fPt100}).
+Therefore, only the Pt(111)-(6x6)-R\ang{\pm 8.8} structure is expected to yield an additional peak in the O 1s and Pt 4f levels.
+A signal was effectively identified in the Pt 4f level at \qty{71.6}{\eV}, but with low intensity (fig. \ref{fig:Pt4fPt111}).
+Interestingly, two more peaks are identified in the O 1s level on Pt(100) at low oxygen pressure (\qty{0.55}{\milli\bar}) in addition to the \ce{O_a} signal, which could be linked to the transient structures measured with SXRD under \qty{5}{\milli\bar} of oxygen (fig. \ref{fig:MapsPt100D}).
+% Two peaks was also measured in the Pt 4f level at \qty{71.8}{\eV} (fig. \ref{fig:Pt4fPt100}).
 
 %%%%%%%%%%%%%%%%%%%% o2/nh3=8 %%%%%%%%%%%%%%%%%%%%
 % Pt(111)
-None of the aforementioned structures were measured under reacting conditions on Pt(111), for both \ce{O_2}/\ce{NH_3} ratios (\num{8} and \num{0.5}, fig. \ref{fig:MapsPt111B} - a \& b), which underlines that platinum oxides are not stable during the catalytic oxidation of ammonia on Pt(111) under the current conditions.
+None of the aforementioned structures were measured under reacting conditions on Pt(111), for both \ce{O_2}/\ce{NH_3} ratios (\num{8} and \num{0.5}, fig. \ref{fig:MapsPt111B} - a \& b), which underlines that platinum oxides are not stable during the catalytic oxidation of ammonia on Pt(111) under those conditions.
 Adsorbed nitrogen species (\ce{N_a}, \ce{NH_x}) were observed in the Pt4f (fig. \ref{fig:Pt4fPt111}) and N 1s (fig. \ref{fig:O1sN1sPt111}) levels, but without related surface reconstructions observable by SXRD on Pt(111) (fig. \ref{fig:MapsPt111B} - c).
 Only adsorbed water was measured during the oxidation of ammonia in the O 1s level.
 
 % Pt(100)
-In contrast with Pt(111), reacting conditions were found to be linked with the appearance of surface reconstructions on Pt(100), depending on prior oxygen exposure time.
-After oxygen exposure for approximately \qty{17}{\hour}, the subsequent introduction of ammonia was linked to the removal of the shifted peaks near \ce{Pt_3O_4} signals (fig. \ref{fig:MapsPt100B} - a).
+In contrast with Pt(111), reacting conditions were found to be linked with the appearance of surface reconstructions on Pt(100), depending on the oxygen exposure time.
+After oxygen exposure for approximately \qty{17}{\hour}, the introduction of ammonia was linked to the removal of the shifted peaks near \ce{Pt_3O_4} signals (fig. \ref{fig:MapsPt100B} - a).
 Both \ce{Pt_3O_4} and shifted signals could again be measured during a second exposure of the cleaned sample to oxygen for approximately \qty{1}{\hour} (fig. \ref{fig:MapsPt100B} - b).
-
-The following introduction of ammonia was seen to induce signals compatible with Pt(100)-p(10x10)-R\ang{0} surface reconstructions on the Pt(100) surface unit cell direction (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a).
-Some periodicity can be observed in the related out-of-plane signals at [H, K] = [0, -1.2] and [H, K] = [0.5, -1], high intensity peaks are observed at $L=1$ and $L=2$ for the measurement at [H, K] = [1.9, 0], which can link the Pt(100)-p(10x10)-R\ang{0} surface reconstructions with the presence of 3D structures.
+The following introduction of ammonia was seen to induce signals compatible with Pt(100)-p(10x10)-R\ang{0} surface reconstructions (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a).
+Some periodicity can be observed in the related out-of-plane signals at [H, K] = [0, -1.2] and [H, K] = [0.5, -1], high intensity peaks are observed at $L=1$ and $L=2$ for the measurement at [H, K] = [1.9, 0] (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - b), which can link the Pt(100)-p(10x10)-R\ang{0} surface reconstructions with the presence of 3D structures.
 Additional in-plane signals are observed in fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} (a), shifted by the same amount $\delta_{H, K}=0.09$ as the signals present under high oxygen atmosphere (fig. \ref{fig:MapsPt100B} - b).
-The intensity of this signal as a function of $L$ was measured at [H, K] = [0.5, -0.91], decreasing with $L$, and thus showing no out-of-plane periodicity.
+The intensity of this signal as a function of $L$ was measured at [H, K] = [0.5, -0.91] (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - b), decreasing with $L$, and thus showing no out-of-plane periodicity.
 
-Lowering the \ce{O_2}/\ce{NH_3} ratio to \num{0.5} has induced the removal of the Pt(100)-p(10x10)-R\ang{0} surface reconstructions and the appearance of Pt(100)-p(33x25)-R\ang{0} hexagonal surface reconstruction, with an out-of-plane signal consistent with that of monolayers (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
-Removing oxygen from the reactor resulted in the progressive removal of the hexagonal reconstruction (fig. \ref{fig:MapsPt100C}), clearly linked to the simultaneous presence of both reagents.
+%%%%%%%%%%%%%%%%%%%% o2/nh3=0.5 %%%%%%%%%%%%%%%%%%%%
 
-Another key difference with Pt(111) is reported in the XPS spectra for Pt(100), with the presence of oxygen species in the O 1s level during reacting condition when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} (fig. \ref{fig:O1sN1sPt100}), but not when this ratio is reduced to \num{0.5} by lowering the oxygen pressure.
+Lowering the \ce{O_2}/\ce{NH_3} ratio to \num{0.5} has removed the Pt(100)-p(10x10)-R\ang{0} surface reconstructions, and induced the appearance of a hexagonal Pt(100)-p(33x25)-R\ang{0} commensurate superstructure, with an out-of-plane signal consistent with that of monolayers (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
+Removing oxygen from the reactor resulted in the progressive removal of the hexagonal structures (fig. \ref{fig:MapsPt100C}), clearly linked to the simultaneous presence of both reagents.
+Another key difference with Pt(111) is reported in the XPS spectra for Pt(100), with the visible presence of oxygen species in the O 1s level during reacting condition when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} (fig. \ref{fig:O1sN1sPt100}), but not when this ratio is reduced to \num{0.5} by lowering the oxygen pressure.
 No adsorbed nitrogen specie was identified when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} in the N 1s level  (fig. \ref{fig:O1sN1sPt100}).
-Therefore, the Pt(100)-p(10x10)-R\ang{0} surface reconstruction can be linked to the presence of ordered oxygen on the Pt(100) surface, which is only permitted by the simultaneous presence of ammonia, \textit{i.e.} linked to the reaction mechanism.
-Additionally, the selectivity towards \ce{NO} in comparison with \ce{N_2} is much more important than for Pt(111) (fig. \ref{fig:RGA450Pt111AndPt100}), which highlights the importance of oxygen adsorbed on the catalyst surface to facilitate the production of \ce{NO}.
+Therefore, the Pt(100)-p(10x10)-R\ang{0} surface reconstruction can be linked to the presence of ordered oxygen species on the Pt(100) surface, which is only permitted by the simultaneous presence of ammonia, \textit{i.e.} linked to the reaction mechanism.
+Additionally, the selectivity towards \ce{NO} in comparison with \ce{N_2} is three times more important than for Pt(111) (fig. \ref{fig:RGA450Pt111AndPt100}), which highlights the importance of oxygen adsorbed on the catalyst surface to facilitate the production of \ce{NO}.
 
 \begin{figure}[!htb]
     \centering
@@ -73,31 +74,32 @@ Additionally, the selectivity towards \ce{NO} in comparison with \ce{N_2} is muc
     \label{fig:RGA450Pt111AndPt100}
 \end{figure}
 
-This difference in selectivity is not observed during the SXRD experiments, this can be related to the position of the gas outlet far away from the sample (fig. \ref{fig:SampleHolder}), in comparison with the XPS experiment where the analyser nose is situated a few millimetres away from the sample surface (fig. \ref{fig:SampleSXRD} - c).
-The contribution of the sample edges (fig. \ref{fig:SampleSXRD} - b), as well as the presence of steps on the single crystal surface may lower the specific contribution of the sample surface.
-% also total pressure?
+This difference in selectivity is not observed during the SXRD experiments, this can be related to the position of the gas outlet far away from the sample (fig. \ref{fig:SampleHolder}), in contrast with the XPS experiment where the analyser nose is situated a few millimetres away from the sample surface (fig. \ref{fig:SampleSXRD} - c).
+The contribution of the sample edges (fig. \ref{fig:SampleSXRD} - b), as well as the presence of steps on the single crystal surface may lower the specific contribution of the sample facet (\textit{i.e} (111) or (100)).
 
 % roughness
-The persisting presence of oxygen on the Pt(100) surface can also be linked to the different evolution of the two catalysts surface roughness.
+The persisting presence of oxygen on the Pt(100) surface can also be linked to different evolutions of the catalysts surface roughness.
 The roughness on the Pt(111) surface decreases during ammonia oxidation (fig. \ref{fig:CTRFit111} - a), consistent with the removal of surface oxides following the introduction of ammonia.
 Indeed, low roughness is already achieved when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{0.5} (fig. \ref{fig:CTRFit111} - a).
 For Pt(100), reacting conditions can also be associated to a decreasing roughness following pure oxygen atmosphere (fig. \ref{fig:CTRFit100} - a).
 However, the minimal roughness is only reached once oxygen is completely removed from the reactor, \textit{i.e.} after the oxidation cycle.
-The surface reconstructions present on the Pt(100) surface during reacting conditions can be linked to the remaining high roughness (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a, \ref{fig:MapsAndLScansPt100LowOxAmmonia} - a), whereas Pt(111) exhibits a bulk terminated surface (fig. \ref{fig:MapsPt111B} - a \& b).
+The  Pt(100)-p(10x10)-R\ang{0} surface reconstructions and Pt(100)-p(33x25)-R\ang{0} hexagonal structures present on the Pt(100) surface during reacting conditions (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a, \ref{fig:MapsAndLScansPt100LowOxAmmonia} - a), can be linked to the remaining high roughness, whereas Pt(111) exhibits a bulk terminated surface (fig. \ref{fig:MapsPt111B} - a \& b).
 
 % surface strain
 A similar behaviour is observed for the out-of-plane lattice strain.
 The introduction of ammonia on Pt(111) was accompanied by a progressive reversal of the strain state, returning to the initial values measured under inert atmosphere when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{0.5} (fig. \ref{fig:CTRFit111} - b).
 For Pt(100), both reacting conditions show a strain state similar to the initial state under inert atmosphere (fig. \ref{fig:CTRFit100} - b).
+The difference in out-of-plane strain compared to \ce{O2}/\ce{NH3} = 8 is in the same order of magnitude for both surfaces, but of different nature, \qty{\approx 0.06}{\percent} tensile / compressive strain on Pt(100) /  Pt(111).
+Overall, the strain measured in this experiment is more important on Pt(100) than Pt(111).
 
 %%%%%%%%%%%%%%%%%%%% Pure nh3 %%%%%%%%%%%%%%%%%%%%
 
-Stopping the oxidation reaction by removing oxygen has finally resulted in the removal of surface reconstructions on the Pt(100) surface (fig. \ref{fig:MapsPt100C} - a).
-If the oxygen pressure is seen to decrease directly after the change of condition in the RGA signal (fig. \ref{fig:RGA450Pt100Cycle}), the hexagonal reconstruction are still measured in the first half of the in-plane reciprocal space map, \textit{i.e.} during the first hours of measurement.
-It is possible that this progressive removal of the hexagonal surface reconstruction is due to a slow transition between adsorbed nitrogen (\ce{N_a}) measured during the reaction, and adsorbed de-hydrogenated species observed only in the absence of oxygen (fig. \ref{fig:O1sN1sPt100} \& \ref{fig:Pt4fPt100}).
-The largest transition in terms of surface strain is also during this change of condition for Pt(100), as the topmost layer goes from important compressive strain to almost bulk atomic positions for the Pt atoms (fig. \ref{fig:CTRFit100} - b).
-Atomic nitrogen is also observed in the N 1s level of Pt(111) (fig. \ref{fig:O1sN1sPt111}), but together with other nitrogen species (fig. \ref{fig:O1sN1sPt111} - \ref{fig:Pt4fPt111}), possibly impinging on its long-range ordering.
-No important change is measured in strain while removing oxygen on Pt(111) (fig. \ref{fig:CTRFit111} - b), supporting the link between surface reconstruction and out-of-plane strain.
+Stopping the oxidation reaction by removing oxygen has finally resulted in the removal of surface structure on the Pt(100) surface (fig. \ref{fig:MapsPt100C} - a).
+If the oxygen pressure is seen to decrease directly after the change of condition in the RGA signal (fig. \ref{fig:RGA450Pt100Cycle}), the hexagonal structures are still measured in the first half of the in-plane reciprocal space map, \textit{i.e.} during the first hours of measurement.
+It is possible that this progressive removal of the hexagonal surface structure is due to a slow transition between adsorbed nitrogen (\ce{N_a}) measured during the reaction, and adsorbed de-hydrogenated species observed only in the absence of oxygen (fig. \ref{fig:O1sN1sPt100} \& \ref{fig:Pt4fPt100}).
+The largest transition in terms of surface strain is also during this change of condition for Pt(100), as the topmost layer goes from important compressive strain to almost bulk atomic positions for the Pt atoms (fig. \ref{fig:CTRFit100} - b, difference of \qty{\approx 0.33}{\percent}).
+Atomic nitrogen is also observed in the N 1s level of Pt(111), but together with other nitrogen species (fig. \ref{fig:O1sN1sPt111} - \ref{fig:Pt4fPt111}), possibly impinging on its long-range ordering.
+No important change is measured in strain while removing oxygen on Pt(111) (fig. \ref{fig:CTRFit111} - b), supporting the link between the Pt(111)-(8x8)-R\ang{0} surface structure, and changes in the out-of-plane strain.
 
 %%%%%%%%% Argon %%%%%%%
 
@@ -106,7 +108,7 @@ For both surfaces, the surface roughness and strain are lower than measured at f
 
 % Discuss role of bulk oxides
 There is no apparent role of surface and bulk oxides on the Pt(111) surface, as the structures growing under high oxygen pressure have been removed directly during the reaction.
-Pt(111)-p(8x8)-R\ang{0} and Pt(111)-p(6x6)-R\ang{0} cannot be linked to an increase of decrease of the catalytic activity, and thus do not seem to take part in the reaction mechanism.
+Pt(111)-p(8x8)-R\ang{0} and Pt(111)-p(6x6)-R\ang{\pm 8.8} cannot be linked to an increase of decrease of the catalytic activity, and thus do not seem to take part in the reaction mechanism.
 
 \ce{Pt_3O_4}, observed here in the Pt(100)-p(2x2)-R\ang{0} arrangement, has been proven to be a source of oxygen atoms sustaining the catalytic oxygenation of \ce{CO} \textit{via} a Mars Van Krevelen mechanism \parencite{Seriani2006, Seriani2008}.
 In the current experiment, a second structure possibly related to \ce{Pt_3O_4} was measured.
@@ -117,4 +119,36 @@ Reducing the oxygen to ammonia ratio is linked to the reconstruction removal, th
 
 It is of key importance to understand the role of platinum oxides in the ammonia oxidation to push the selectivity towards nitrogen oxide at relevant pressure and temperature conditions.
 
-% mention pt rh study
+The different structures observed during this experiment are resumed in tab. \ref{tab:RecapSXRD}.
+\begin{table}[!htb]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{@{}llll@{}}
+    \toprule
+    O2 & NH3 & Pt(111) & Pt(100) \\
+    \midrule
+    80 & 0  & Two hexagonal rotated Pt(111)-p(6x6)-R\ang{8.8} & Epitaxial Pt(100)-p(2x2)-R\ang{0} \\
+       &    & commensurate superstructures (monolayer)        & structure (bulk \ce{Pt3O4}),      \\
+       &    & After \qty{9}{\hour}\qty{30}{\minute}: Pt(111)-p(8x8)-R\ang{0}          & and signals shifted in H or K     \\
+       &    & commensurate superstructure (multilayer)        & (monolayer)                       \\
+    \midrule
+    80 & 10 & No oxide layer / no reconstruction              & Pt(100)-p(10x10)-R\ang{0} reconstruction\\
+       &    &                                                 & and signals shifted in H or K     \\
+       &    &                                                 & (without out-of-plane structure)  \\
+       &    &                                                 & Higher \ce{NO} selectivity, and   \\
+       &    &                                                 & higher \ce{O_a} signal in O 1s in \\
+       &    &                                                 & comparison with Pt(111)           \\
+    10 & 10 & No oxide layer / no reconstruction              & Pt(100)-p(33x25)-R0°structure (monolayer) \\
+       &    & \ce{N_a} and \ce{NH_{x,a}} in N 1s              & No more signal in O 1s level      \\
+       &    &                                                 & Only \ce{N_a} in N 1s             \\
+    5  & 10 & No oxide layer / no reconstruction              & Progressive removal of Pt(001)-p(33x25)-R0°structure \\
+    0  & 10 & No oxide layer / no reconstruction              & No oxide layer / no reconstruction\\
+    \midrule
+    5  &  0 & Back to the same structures as at \qty{80}{\milli\bar} of \ce{O2}, & Transient structures, \\
+       &    & but with decreased kinetics                     & different from the one at \qty{80}{\milli\bar} of \ce{O2} \\
+    \bottomrule
+\end{tabular}%
+}
+\caption{Brief summary of surface structures identified with SXRD, and relevant changes in XPS or RGA signals.}
+\label{tab:RecapSXRD}
+\end{table}
