--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -3,7 +3,7 @@
 % introduce sxrd
 Past ammonia oxidation experiments on \ce{Pt_{25}Rh_{75}} (100) \parencite{Resta2020a} single-crystals gave significant new insights on the relaxation dynamics when the system crosses the catalyst activation barrier.
 The experiment focused on measuring the catalyst selectivity above the light off temperature (at \qty{175}{\degreeCelsius} and \qty{375}{\degreeCelsius}).
-It was found that the transition from a nitrogen-rich to oxygen-rich input mixture coincides with a relaxation change in the topmost metallic layer: moving from outward to inward.
+The transition from a nitrogen-rich to oxygen-rich input mixture coincides with a relaxation change in the topmost metallic layer: moving from outward to inward.
 
 Thanks to near-ambient pressure x-ray photoelectron spectroscopy (NAP-XPS) experiments, nitrogen rich species (such as \ce{N_2}) were associated to out-of-plane expansion of the topmost layer; while oxidative species (such as \ce{NO} and atomic oxygen) were linked to out-of-plane contraction.
 This change in relaxation has an impact on the band structure, and therefore on the catalytic properties as proposed in the d-band model \parencite{Mavrikakis1998}.
@@ -31,6 +31,7 @@ The Fermi edge is also measured after each core level to be able to find the zer
 
 The oxidation of ammonia on single crystals was measured at \qty{450}{\degreeCelsius}, a temperature above the catalyst light-off.
 Higher temperatures were avoided in favour of the setup life expectancy in the aggressive reaction environment, and the long time required to perform all the measurements.
+The different conditions are resumed in tab. \ref{tab:ConditionsSXRD} and \ref{tab:ConditionsXPS}.
 The sample was characterised under argon before (1) and after (6) the oxidation cycle to assess the reversibility of the catalyst surface.
 To ensure that any surface relaxation effects are attributed to the simultaneous presence of ammonia and oxygen in the reactor, the sample initially underwent exposure to a high-oxygen atmosphere (2), monitoring potential surface oxide growth.
 Subsequent introduction of ammonia (3) facilitated the examination of existing surface oxides' impact on catalyst selectivity during the reaction, as well as their stability under reaction conditions.
@@ -69,7 +70,6 @@ Lastly, the sample surface was exposed to a reduced pressure of oxygen, to make 
 
 Due to important electron absorption in high atmospheres, the same atmospheres used for \textit{in-situ} and \textit{operando} SXRD cannot be reproduced for NAP-XPS, and the total pressure had to be lowered.
 The total atmosphere is not anymore kept constant by the use of Argon between each condition, while the reactant partial pressure is approximately \qty{10}{\percent} of the partial pressures used in BCDI and SXRD, with an equivalent (\ce{O_2} / \ce{NH_3}) ratio.
-The different conditions are resumed in tab. \ref{tab:ConditionsSXRD} and \ref{tab:ConditionsXPS}.
 
 \begin{table}[!htb]
 \centering
@@ -121,7 +121,7 @@ The alignment of the beam was performed with the direct beam using the same proc
 In the horizontal configuration, the incident angle is $\beta$, set to grazing incidence so that the beam recovers the entire sample surface.
 The beam footprint is larger than the sample which presents a round shape (diameter \qty{\approx 8}{\mm} - fig. \ref{fig:SampleSXRD}).
 This allows us to consider that the beam is always covering the entire sample surface, thereby ignoring illumination effects, \textit{i.e} the loss of intensity during measurement due to a loss of alignment from the rotation of the sample plane.
-Crystal truncation rods were performed in the out-of-plane direction, perpendicular to the sample plane, \textit{i.e.} in the vertical plane ($\vec{x}, \vec{z}$) to maximise the intensity of the scattered field and to ignore polarisation effects in the evolution of the CTR intensity (fig. \ref{fig:polarization_effect}).
+Crystal truncation rods were performed in the out-of-plane direction, perpendicular to the sample plane, \textit{i.e.} in the vertical plane ($\vec{x}, \vec{z}$) to maximise the intensity of the scattered field and to ignore polarisation effects in the evolution of the CTR intensity (fig. \ref{fig:PolarisationEffect}).
 The sample plane was verified at the beginning of each condition to ensure that the beam consistently impinges on the sample surface.
 The orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also recomputed by measuring two different Bragg peaks to be able to quickly navigate in the reciprocal space.
 
@@ -130,7 +130,8 @@ The orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also rec
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/SampleAndSetups.pdf}
     \caption{
         a) Large XCAT reactor.
-        b) Round single crystal set on sample holder the top of the crystal is [111] oriented, the surface area of the single crystal is \qty{\approx 5e7}{\um^2}, the [100] oriented sample has the same shape.
+        b) Round single crystal set on sample holder, the crystal presents here a (111) top facet.
+        The surface area of the single crystal is \qty{\approx 5e7}{\um^2}, the Pt(100) sample has the same shape.
         c) Detailed drawing of the XPS chamber at the B07 beamline at the Diamond Synchrotron (right), taken from Held et al. \parencite*{Held2020}.
     }
     \label{fig:SampleSXRD}
