--- a/Sections/6_Appendix/Pt100.tex
+++ b/Sections/6_Appendix/Pt100.tex
@@ -1,20 +1,11 @@
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/hex_reconstruction.pdf}
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/hex_reconstruction.pdf}
     \caption{
-    Sketch of Pt(111) surface unit cell vectors, together with the unit cell vectors corresponding to the unit cell with $\gamma=\ang{137.38}$ identified under \qty{10}{\milli\bar} of ammonia and \qty{5}{\milli\bar} of oxygen.
+    Sketch of Pt(100) surface and Pt(100)-p(33x25)-R\ang{0} structure unit cell vectors, in real and reciprocal space (a).
     }
     \label{fig:Pt100UnitCellsReconstruction}
-\end{figure}
-
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/introduction/Pt3O4onPt100.pdf}
-    \caption{
-    Epitaxy relationship used when simulating structure factors for \ce{Pt_3O_4} on Pt(100) in a Pt(100)-(2x2)-R\ang{0} arrangement.
-    }
-    \label{fig:Pt3O4onPt100}
 \end{figure}
 
 \begin{figure}[!htb]
