--- a/Sections/6_Appendix/Pt111.tex
+++ b/Sections/6_Appendix/Pt111.tex
@@ -18,27 +18,20 @@
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/rotated_reconstruction_cells.pdf}
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/rotated_reconstruction_cells.pdf}
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/reconstruction_42punto65.pdf}
     \caption{
-    Sketch of Pt(111) surface unit cell vectors, together with the unit cell vectors corresponding to the rotated hexagonal reconstruction identified under \qty{80}{\milli\bar} and \qty{5}{\milli\bar} of oxygen.
+    Sketch of Pt(111) surface and Pt(111)-p(6x6)-R\ang{0} structure unit cell vectors, in real and reciprocal space (a).
+    Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0} structure (b).
     }
-    \label{fig:Pt111UnitCellsRotated}
+    \label{fig:Pt11180O2Structures}
 \end{figure}
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/reconstruction_42punto65.pdf}
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/alphapto2_reconstruction_cell.pdf}
     \caption{
-    Sketch of Pt(111) surface unit cell vectors, together with the unit cell vectors corresponding to the unit cell with $\gamma=\ang{137.38}$ identified under \qty{80}{\milli\bar} and \qty{5}{\milli\bar} of oxygen.
-    }
-    \label{fig:Pt111UnitCellsReconstruction}
-\end{figure}
-
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/alphapto2_reconstruction_cell.pdf}
-    \caption{
-    Sketch of Pt(111) surface unit cell vectors, together with the unit cell vectors corresponding to the $\alpha$\ce{Pt_O_2} surface oxide  identified under \qty{80}{\milli\bar} and \qty{5}{\milli\bar} of oxygen.
+    Sketch of Pt(111) surface and Pt(111)-p(26x26)-R\ang{0} structure unit cell vectors, in real and reciprocal space (a).
     }
     \label{fig:Pt111AlphaPtO2}
 \end{figure}
@@ -74,32 +67,31 @@
         \midrule
          & & \multicolumn{11}{c|}{Time since gas introduction (end of measurement)} \\
         \midrule
-         & & 03h23 & 10h45 & \multicolumn{1}{|l}{00h34} & 04h03 & 08h00 & 15h57 & 22h56 & 24h08 & 25h43 & 26h36 & 27h28 \\
+                                     &                  & 03h23 & 09h53 & \multicolumn{1}{|l}{00h34} & 04h03 & 08h00 & 15h57 & 22h56 & 24h08 & 25h43 & 26h36 & 27h28 \\
         \midrule % first struc split low O2
-        RHSs & $3.010 \pm 0.012$ & \yes & \yes & \multicolumn{1}{|l}{\no} & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes \\
+        Pt(111)-p(6x6)-R\ang{\pm 8.8} & $3.01 \pm 0.01$ & \yes  & \yes  & \multicolumn{1}{|l}{\yes}  & \yes  & \yes  & \yes  & \yes  & \yes  &                              \yes & \yes & \yes \\
         \midrule % first struc not split high O2
-        RHSs & $2.919 \pm 0.030$ & \yes & \yes & \multicolumn{1}{|l}{\no} & \no & \no & \no & \no & \no & \yes & \no & \no \\
+        Pt(111)-p(6x6)-R\ang{\pm 8.8} & $2.92 \pm 0.03$ & \yes  & \yes  & \multicolumn{1}{|l}{\no}   & \no   & \no   & \no   & \no   & \no   &                              \yes & \no & \no \\
         \midrule % first struc not split low O2
-        RHSs & $2.873 \pm 0.015$ & \no & \no & \multicolumn{1}{|l}{\yes} & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes \\
+        Pt(111)-p(6x6)-R\ang{\pm 8.8} & $2.87 \pm 0.02$ & \no   & \no   & \multicolumn{1}{|l}{\yes}  & \yes  & \yes  & \yes  & \yes  & \yes  &                              \yes & \yes & \yes \\
         \midrule % first struc split low O2
-        RHSs & $2.788 \pm 0.067$ & \no & \no & \multicolumn{1}{|l}{\no} & \no & \yes & \yes & \yes & \yes & \yes & \yes & \yes \\
+        Pt(111)-p(6x6)-R\ang{\pm 8.8} & $2.79 \pm 0.07$ & \no   & \no   & \multicolumn{1}{|l}{\no}   & \no   & \yes  & \yes  & \yes  & \yes  &                              \yes & \yes & \yes \\
         \midrule % hex struct
-        $\alpha$-\ce{PtO_2} surface oxide & $2.688 \pm 0.022$ & \no & \yes & \multicolumn{1}{|l}{\no} & \no & \no & \no & \no & \yes & \yes & \yes & \yes \\
-        \midrule % surf oxide
-        RHSs & $2.312 \pm 0.040$ & \no & \yes & \multicolumn{1}{|l}{\no} & \no & \no & \yes & \yes & \yes & \yes & \yes & \yes \\
+        Pt(111)-p(8x8)-R\ang{0}       & $2.69 \pm 0.02$ & \no   & \yes  & \multicolumn{1}{|l}{\no}   & \no   & \no   & \no   & \no   & \yes  &                              \yes & \yes & \yes \\
+        % \midrule % surf oxide
+        % Pt(111)-p(6x6)-R\ang{\pm 8.8} & $2.31 \pm 0.04$ & \no & \yes & \multicolumn{1}{|l}{\no} & \no & \no & \yes & \yes & \yes & \yes & \yes & \yes \\
         \midrule % first struc not split high O2
         % NRHS & $1.550 \pm 0.000$ & \yes & nv & \multicolumn{1}{|l}{nv} & \no & nv & nv & nv & nv & nv & nv & nv \\
         % \midrule % first struc not split low O2
-        $\alpha$-\ce{PtO_2} surface oxide & $1.528 \pm 0.000$ & \no & nv & \multicolumn{1}{|l}{nv} & \yes & nv & nv & nv & nv & nv & nv & nv \\
+        Pt(111)-p(8x8)-R\ang{0}       & $1.53 \pm 0.00$ & \yes & nv     & \multicolumn{1}{|l}{nv}    & \yes  & nv    & nv    & nv & nv & nv & nv & nv \\
         % NRHS & $1.35 \pm 0.000$ & \no & nv & \multicolumn{1}{|l}{nv} & \yes & nv & nv & nv & nv & nv & nv & nv \\
         \bottomrule
     \end{tabular}
     }
     \caption{
-        Interplanar spacing values observed in reciprocal maps for different oxygen pressure and exposition times (\yes).
-        Non observed peaks are in red (\no), non visible peaks are represented by the acronym \text{nv}.
-        The errors on the peak position are computed by considering the positions of similar peaks in q-space.
-        RHSs stands for hexagonal rotated structures.
+        Interplanar spacings computed from signals observed during in-plane reciprocal maps, for different oxygen pressure and exposition times for Pt(111).
+        The three markers (\yes, \no, \text{nv}) correspond to observed, non-observed, and non visible signals (\textit{i.e.} not in the area spanned by the map).
+        The errors on the interplanar spacings are computed by considering the positions of similar peaks in q-space.
     }
     \label{tab:InterplanarSpacingsPt111Oxygen}
 \end{table}
