--- a/Sections/2_Theory_Models/BCDI.tex
+++ b/Sections/2_Theory_Models/BCDI.tex
@@ -1,22 +1,24 @@
-\section{BCDI} \label{sec:BCDI}
+\section{Bragg coherent diffraction imaging} \label{sec:BCDI}
 
 Bragg Coherent Diffraction Imaging (BCDI) \parencite{Robinson2001, Pfeifer2006, Robinson2009} is a powerful technique for the non-destructive characterisation of material structure in three dimensions.
 It reaches unparalleled spatial and strain resolution for a scattering technique, few nanometres \parencite{Labat2015, Cherukara2018a} and \num{e-4} respectively \parencite{Newton2010, Lauraux2020}.
 
 The BCDI method is reliant on the coherence of the light available, thus only began to be exploited at third generation synchrotron sources \parencite{Miao1999, Miao2000, Robinson2001, Labat2007, Robinson2009, Vaxelaire2010, Chamard2010, Clark2012, Clark2013, Yang2013, Xiong2014}, also the subject of reviews \parencite{Nugent2010, Miao2015}.
-Since then it was developed into a characterisation tool for \textit{in situ / operando} studies of materials structure, mostly applied to three fields, electrochemistry \parencite{Ulvestad2015}, heterogeneous catalysis \parencite{Ulvestad2016}, and the structure and evolution of defects \parencite{Labat2015}.
+Since then it was developed into a characterisation tool for \textit{in situ / operando} studies of materials structure, mostly applied to three fields: electrochemistry \parencite{Ulvestad2015}, heterogeneous catalysis \parencite{Ulvestad2016}, and the structure and evolution of defects \parencite{Labat2015}.
 BCDI has gained from further source and beamline improvements as many synchrotrons have recently completed or are in the process of an upgrade from $3^{rd}$ to $4^{th}$ generation synchrotrons, which is predicted to allow the study of \textit{in-situ} dynamical phenomena \parencite{Lo2018}.
 Focusing optics that allowed the development of coherent imaging techniques by increasing the coherent flux on the probed sample will be discussed in this section.
 
 \subsection{Scattering by strained crystals}\label{sec:StrainBCDI}
 
-In this thesis, the intensity scattered by a single crystal of dimensions below the coherent volume of the source is considered.
+In this thesis, the intensity scattered by a single crystal of dimensions below the coherent volume of the source is considered to introduce BCDI.
 The scattered waves interfere with each other, and maximum intensity is observed when the scattering vector satisfies the Laue condition.
 
 Note that the following derivations only apply if the diffraction pattern is viewed at a distance far away from the diffracting object, in a region known as the far-field or Fraunhofer region \parencite{Willmott}, where the scattered waves can be considered as plane waves.
 Moreover, the scattering volume is assumed to be in the focal plane of the focusing optics and far from the source so that the waves in the scattering volume can also be described as plane waves.
-Finally, the scattering volume is assumed to be small with dimensions below the x-ray extinction length to ignore multiple scattering and stay in the kinematical approach of diffraction.
-The amplitude of the incident field is considered to be homogeneous in the scattering volume.
+Finally, the scattering volume is assumed to be small with dimensions below the x-ray extinction length to ignore multiple scattering, and stay in the kinematical approach of diffraction.
+The incident field is assumed to be perfectly coherent in the longitudinal and transverse direction, with a homogeneous amplitude in the scattering volume.
+A discussion of the extent of these approximations is given in Godard et al . \parencite*{Godard2021}.
+% only elastic scattering and no lattice variations
 
 The community has recently been investigating a dynamical approach to Bragg Coherent Diffraction Imaging (BCDI) \parencite{Yan2014, Shabalin2017, Hu2018, Gao2022} using the Takagi-Taupin equations \parencite{Takagi1962, Takagi1969}.
 This method tends to validate the kinematical approach when working with slightly strained sub-micron sized crystals \parencite{Karpov2019, Barringer2021}.
@@ -54,32 +56,36 @@ To reduce the complexity in the second part of eq. \ref{eq:FcrystalBCDI2}, only 
 
 \begin{align}
     \label{eq:FcrystalBCDI3}
-    F(\vec{q}) & = \sum_j^{N_{atoms, uc}} f_j(\vec{q}) e^{i\vec{q}.\vec{r}_{0,j}} \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R}_k} e^{i\vec{q}.\vec{u}_k}\\
+    F_{crystal}(\vec{q}) & = \sum_j^{N_{atoms, uc}} f_j(\vec{q}) e^{i\vec{q}.\vec{r}_{0,j}} \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R}_k} e^{i\vec{q}.\vec{u}_k}\\
     \label{eq:FcrystalBCDI4}
-    F(\vec{q}) & = F_{uc}^k(\vec{q}) \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R}_k} e^{i(\vec{G}+\vec{q}-\vec{G}).\vec{u}_k}\\
+    F_{crystal}(\vec{q}) & = \sum_k^{N_{uc}} F_{uc}(\vec{q}) e^{i\vec{q}.\vec{R}_k} e^{i(\vec{G}+\vec{q}-\vec{G}).\vec{u}_k}\\
     \label{eq:FcrystalBCDI5}
-    F(\vec{q}) & = F_{uc}^k(\vec{q}) \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R}_k} e^{i\vec{G}.\vec{u}_k} \times e^{i(\vec{q}-\vec{G}).\vec{u}_k}\\
+    F_{crystal}(\vec{q}) & = \sum_k^{N_{uc}} F_{uc}(\vec{q}) e^{i\vec{q}.\vec{R}_k} e^{i\vec{G}.\vec{u}_k} \times e^{i(\vec{q}-\vec{G}).\vec{u}_k}\\
     \label{eq:FcrystalBCDI6}
-    F(\vec{q} \approx \vec{G}) & = \sum_k^{N_{uc}} F_{uc}^k(\vec{G}) e^{i\vec{q}.\vec{R}_k} e^{i\vec{G}.\vec{u}_k}\\
+    F_{crystal}(\vec{q} \approx \vec{G}) & = \sum_k^{N_{uc}} F_{uc}(\vec{G}) e^{i\vec{q}.\vec{R}_k} e^{i\vec{G}.\vec{u}_k}\\
     \label{eq:FcrystalBCDI7}
-    F(\vec{q} \approx \vec{G}) & = DFT[\rho_k(\vec{r}) e^{i\vec{G}.\vec{u}_k}]
+    % F(\vec{q} \approx \vec{G}) & = DFT[\rho(\vec{r}) e^{i\vec{G}.\vec{u}_k}]
+    F_{crystal}(\vec{q} \approx \vec{G}) & = DFT[ F_{uc}(\vec{G}) e^{i\vec{G}.\vec{u}_k}]_{N_{uc}}
 \end{align}
 
-The first part of eq. \ref{eq:FcrystalBCDI6} can be considered to be the Fourier transform of the unit cell $k$ of electronic density $\rho_k(\vec{r})$ in which all atoms have the same displacement vector $\vec{u}_k$.
-In this equation the electronic density is allowed to vary from one unit cell to another.
-Moreover, one can recognise the expression of a discrete Fourier transform (DFT) of frequency $\vec{G}$ in which $\rho_k(\vec{r})$ is the $k$-th sample of the series that consist in $N_{uc}$ samples \parencite{Cooley1965, Cochran1967, FavreNicolin2011a, Godard2021}.
-The reason for the approximation $\vec{q} \approx \vec{G}$ is simply to be able to use a Fast Fourier Transform (FFT) algorithm to compute the DFT, since it has a linearithmic time complexity $O(n \, log(n))$.
+It is assumed that the variations of the unit cell structure factor $F_{uc}(\vec{q})$ are negligible when $\vec{q} \approx \vec{G}$, so that $F_{uc}(\vec{q})$ becomes $F_{uc}(\vec{G})$.
+% $F_{uc}(\vec{q})$ can be linked to its electronic density by eq. \ref{eq:AtomicFormFactor}.
+% The first part of eq. \ref{eq:FcrystalBCDI6} can be considered to be the Fourier transform of the unit cell $k$ of electronic density $\rho(\vec{r})$ in which all atoms have the same displacement vector $\vec{u}_k$.
+% In this equation the electronic density is allowed to vary from one unit cell to another.
+One can recognise the expression of a discrete Fourier transform (DFT) of frequency $\vec{G}$, coefficient $F_{uc}(\vec{G}) e^{i\vec{G}.\vec{u}_k}$, and $N_{uc}$ samples \parencite{Cooley1965, Cochran1967, FavreNicolin2011a, Godard2021}.
+The approximation $\vec{q} \approx \vec{G}$ allows the use of a Fast Fourier Transform (FFT) algorithm to compute the DFT, with a linearithmic time complexity $O(n \, log(n))$.
 This approximation breaks down far away from the Laue condition, or if the strain is so important that the condition $(\vec{q}-\vec{G}).\vec{u}_k<<1$ is not anymore respected to move from eq. \ref{eq:FcrystalBCDI5} to eq. \ref{eq:FcrystalBCDI6} \parencite{Takagi1969}.
 
 In the case of highly strained crystal, or when the intensity must be computed far away from Bragg peaks, it is still possible to resort to so-called \textit{atomistic} simulations, by computing the scattering intensity directly from the position of each atom in the crystal (eq. \ref{eq:FCrystal1}).
-However, the position of each atom must be known and, for a large crystal, the sum becomes too large to handle even with high-performance clusters due to a quadratic time complexity $O(n^2)$.
+However, the position of each atom must be known and, for a large crystal, the sum becomes too large to handle even with high-performance clusters due to a quadratic time complexity $O(n^2)$ (n is the number of operations).
 Atomistic simulations are usually used when studying crystals of dimensions below 100 nm \parencite{Dupraz2022}.
 
 For a non-strained crystal, the Lattice factor is the same at each Bragg peak, equal to the Fourier transform of the crystal's lattice.
 In the case of a strained crystal, the additional phase factor introduced in eq. \ref{eq:FcrystalBCDI7} breaks the centrosymmetry around each Bragg peak, due to the heterogeneous displacement field in the crystal.
 The effect of the displacement can be seen in the distortion of the scattering intensity around Bragg peaks.
 It is important to notice that the phase in eq. \ref{eq:FcrystalBCDI7} is equal to the dot product between the displacement vector and the reciprocal space vector.
-This means that to possess the complete displacement field, one must collect the scattered intensity around three non-coplanar Bragg peaks \parencite{Newton2010} that will yield the displacement field over an orthogonal base ($\vec{q}_x, \vec{q}_y, \vec{q}_z$).
+This means that to possess the complete displacement field, one must collect the scattered intensity around three non-coplanar Bragg peaks \parencite{Newton2010} that will yield the displacement field over an orthogonal basis ($\vec{q}_x, \vec{q}_y, \vec{q}_z$).
+The electronic density is also sometimes named Bragg electronic density to illustrate this sensitivity.
 
 \subsubsection{Data collection} \label{sec:DataCollectionBCDI}
 
@@ -91,8 +97,8 @@ This measurement is called a rocking curve (fig. \ref{fig:3DDP} - left), the ass
     \includegraphics[width=0.39\textwidth]{/home/david/Documents/PhD/Figures/introduction/RockingCurve.png}
     \includegraphics[width=0.59\textwidth]{/home/david/Documents/PhD/Figures/bcdi_data/3D_DP/DP_white_1.png}
     \caption{
-    (Left) Rocking curve for the measurement of the 3D scattered intensity around a Bragg peak. Taken from \cite{Willmott}.
-    (Right) 3D diffraction pattern collected at SixS (SOLEIL).
+    Left: rocking curve for the measurement of the 3D scattered intensity around a Bragg peak. Taken from \cite{Willmott}.
+    Right: 3D diffraction pattern collected at SixS (SOLEIL).
     Different iso-surfaces from high (red) to low (yellow) intensity are plotted, highlighting the direction dependent drop of the scattered intensity as a function of $q_{hkl}+\delta q$ where $\delta q$ is the distance from the centre of the Bragg peak.
     }
     \label{fig:3DDP}
@@ -100,16 +106,17 @@ This measurement is called a rocking curve (fig. \ref{fig:3DDP} - left), the ass
 
 The measurements are commonly collected in angular space, and can be converted into $q$-space to compare different Bragg peaks in the reciprocal space.
 However, this step is usually avoided since the intermediate interpolation process can be inaccurate, especially when the scattering intensity is low.
+It is also possible to collect 3D measurements by tuning the energy of the incident beam \parencite{Cornelius2011}.
 
 \subsection{Phase retrieval}\label{sec:PhaseRetrieval}
 
-As seen in sec. \ref{sec:DataCollectionSXRD}, the diffracted intensity collected by the detector is proportional to the squared modulus of the structure factor $F(\vec{q})$ (eq. \ref{eq:ScatteredIntensity}), the phase of the scattered x-rays is lost during the measurement.
+As seen in sec. \ref{sec:DataCollectionSXRD}, the diffracted intensity collected by the detector is proportional to the squared modulus of the structure factor $F_{crystal}(\vec{q})$ (eq. \ref{eq:ScatteredIntensity}), the phase of the scattered x-rays is lost during the measurement.
 
-Without the phase information, it is impossible to directly reconstruct the electron density distribution with the help of an inverse discrete Fourier transform (IDFT - eq. \ref{eq:IDFT}), and to obtain a detailed structural model of the crystal.
+Without the phase information, it is impossible to directly reconstruct the crystal electronic density with the help of an inverse discrete Fourier transform (IDFT, from eq. \ref{eq:FCrystal1}), and to obtain a detailed structural model of the crystal.
 
 \begin{equation}
     \label{eq:IDFT}
-    \rho_k(\vec{r}) e^{i\vec{G}.\vec{u}_k} = IDFT [F(\vec{q} \approx \vec{G})]
+    \rho(\vec{r}) = IDFT [F_{crystal}(\vec{q})] %  \approx \vec{G}
 \end{equation}
 
 It has been demonstrated that when fulfilling the \textit{oversampling} condition, the phase lost during the measurement can be retrieved \parencite{Shannon1949, Sayre1952}.
@@ -131,42 +138,44 @@ However, high oversampling rate take more measurement time, and can for example 
 An oversampling of three in each direction is in general sufficient to successfully reconstruct the probed samples \parencite{Dupraz2015}.
 The oversampling condition partly dictates the instrumental parameters which define the extent of the data voxels, the small volumes that constitute the 3D data array.
 
+\begin{figure}[!htb]
+   \centering
+   \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/introduction/PhaseRetrieval.pdf}
+   \caption{
+   Iterative phase retrieval algorithms converge towards a solution by the means of real and reciprocal space constraints.
+   $\rho'(\vec{r})$ is the updated Bragg electronic density after application of the support constraint.
+   }
+   \label{fig:PRAlgo}
+\end{figure}
+
 Fienup et al. \parencite*{Fienup1978, Fienup1982, Fienup1986} have laid the ground for computer methods permitting phase retrieval, once the oversampling condition has been satisfied.
 The error-reduction (ER) algorithm works by iterating between real and reciprocal space by the means of fast Fourier transforms (FFT) and inverse fast Fourier transforms (IFFT) methods.
-The process starts by assigning random phases to the square root of the measured reciprocal space data to create a first guess of the structure factor: $F(\vec{q}) = \sqrt{I(\vec{q})}e^{i\Phi(\vec{q})}$.
-The inverse Fourier transform of the structure factor yields the Bragg electronic density of the crystal (eq. \ref{eq:IDFT}).
+The process starts by assigning random phases to the square root of the measured scattered intensity ($I(\vec{q})$), to create a first guess of the structure factor: $F_{crystal}(\vec{q}) = \sqrt{I(\vec{q})}e^{i\Phi(\vec{q})}$.
+The inverse Fourier transform of the structure factor yields the electronic density of the crystal (eq. \ref{eq:IDFT}).
 A real space constraint is then applied by selecting a region above a certain threshold $t$ of the modulus of the electronic density which is called the \textit{support}.
 The electronic density outside the support is set to zero (eq. \ref{eq:ElectronicDensity}).
-The structure factor is then computed with the Fourier transform of the electronic density (eq. \ref{eq:FcrystalBCDI7}), the following reciprocal space constraint consisting in replacing the amplitude of the computed structure factor by the square root of the measured intensity.
+The structure factor is then computed with the Fourier transform of the electronic density, the following reciprocal space constraint consisting in replacing the amplitude of the computed structure factor by the square root of the measured intensity.
 
 \begin{equation}
     \label{eq:ElectronicDensity}
     \rho(\vec{r}) =
         \begin{cases}
             0  & \text{if} \; |\rho(\vec{r})| < t \\
-            \rho(\vec{r}) & \text{if}  \; |\rho(\vec{r})| >= t
+            \rho(\vec{r}) & \text{if}  \; |\rho(\vec{r})| \geq t
         \end{cases}
 \end{equation}
 
-By iterating between the real and reciprocal space, the algorithm converges towards a final solution for the electronic density (fig. \ref{fig:PRAlgo})
+By iterating between the real and reciprocal space, the algorithm converges towards a final solution for the electronic density (fig. \ref{fig:PRAlgo}).
 
-\begin{figure}[!htb]
-   \centering
-   \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/introduction/PhaseRetrieval.png}
-   \caption{
-   Iterative phase retrieval algorithm converge towards a solution by the means of real and reciprocal space constraints.
-   }
-   \label{fig:PRAlgo}
-\end{figure}
-
-The error-metric used to follow the convergence of the algorithm is simply the mean squared error between the square root of the measured intensity and the structure factor computed from the Fourier transform of the electronic density $A(\vec{q})$ (eq. \ref{eq:MSE}).
+The error-metric used to follow the convergence of the algorithm is the mean squared error between the square root of the measured intensity, and the structure factor computed from the Fourier transform of the electronic density.
+The main drawback of this error-metric is that each voxel is given the same weight, whereas the impact of the approximation detailed previously depend on the distance from the Bragg peak \parencite{Godard2021}.
 
 \begin{equation}
     \label{eq:MSE}
-    E = \frac{\sum \big( F(\vec{q}) - \sqrt{I(\vec{q})}  \big)^2}{I(\vec{q})}
+    E = \frac{\sum \big( F_{crystal}(\vec{q}) - \sqrt{I(\vec{q})}  \big)^2}{I(\vec{q})}
 \end{equation}
 
-More algorithms have since then been developed that try to help converge towards the final solution without being stuck in local minima such as the hybrid input-output (HIO) and relaxed averaged alternating reflections (RAAR) algorithms, by introducing a new parameter, $\beta$, which relaxes the threshold condition in real space from the ER algorithm \parencite{Marchesini2003, Luke2005, Marchesini2007}.
+More algorithms have since then been developed to help converge towards the final solution without being stuck in local minima such as the hybrid input-output (HIO) and relaxed averaged alternating reflections (RAAR) algorithms, by introducing a new parameter, $\beta$, which relaxes the threshold condition in real space from the ER algorithm \parencite{Marchesini2003, Luke2005, Marchesini2007}.
 
 Finally, a major recent improvement of the phase retrieval algorithm is the possibility to take into account the partial coherence of the beam \parencite{Sinha1998, Vartanyants2001, Williams2007, Whitehead2009, Nugent2010, ChenBo2012} together with the point-spread function of the detector by using the deconvolution Richardson-Lucy algorithm \parencite{Richardson1972, Lucy1974, Fish1995, Clark2012}.
 The point-spread function (PSF) must first be approximated with a 3D Gaussian, Lorentzian or pseudo-voigt shape, depending on the expected coherence of the beam.
@@ -222,7 +231,7 @@ Concerning the resolution of the retrieved atomic displacement, Labat et al. \pa
 Another method is to work in a similar way to the Fourier shell correlation by replacing the shells of structure factor as a function of $\vec{q}$ by shells of strain as a function of the strain magnitude, and see if there exists a strain threshold below which the correlation drops.
 This method is then called the strain shell correlation \parencite{Girard2020}.
 
-However, one must keep in mind that the upper threshold for the strain resolution exists based on the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ condition, which mostly affect the quality of the phase retrieval.
+However, one must keep in mind that the upper threshold for the strain resolution exists based on the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ condition, which mostly affects the quality of the phase retrieval.
 Highly strained crystals are very difficult to reconstruct and represent the next milestone in Bragg coherent diffraction imaging, recent methods have been proposed for specific cases such as phase transitions \parencite{Wang2020}.
 One could imagine a future in which the atomistic computation of the scattering factor has been so optimised that phase retrieval algorithms would only be needed to provide an initial guess to the electronic density, and be replaced in the final steps by a simple fitting of the computed structure factor to the square root of the measured intensity.
 A reverse Monte-Carlo method used already for the simulation of powder diffractograms could also be used \parencite{RLMcGreevy2001}.
@@ -240,17 +249,17 @@ An empiric criterion to select the voxels that correspond to the crystal's surfa
    \includegraphics[height=4.5cm]{/home/david/Documents/PhD/Figures/bcdi_data/B7/hist_iso.pdf}
    \includegraphics[height=4.4cm]{/home/david/Documents/PhD/Figures/bcdi_data/D6/amp_D6.png}
    \caption{
-   Histogram representing the distribution of the Bragg electronic density amplitude, normalised by its maximum (left).
+   Histogram representing the distribution of the electronic density amplitude, normalised by its maximum (left).
    Values below 0.05 are ignored since they typically belong to voxels located far away from particle support.
    Amplitude of the electronic density in a slice of the reconstructed object (right).
-   Two curves are drawn at the values of \num{0.05} (outer curve) and \num{0.6} (inner curve).
+   Two curves are drawn at the iso-surface values of \num{0.05} (outer curve) and \num{0.6} (inner curve).
    }
    \label{fig:histo}
 \end{figure}
 
 Once the threshold for the iso-surface is selected, it is possible to visualise a contour of the object with specialised solutions such as \textit{Paraview} (\cite{Ahrens2001} - fig. \ref{fig:FacetsParaview}) or \textit{Gwaihir} (\cite{Simonne2022} - fig. \ref{fig:3D_object}).
 
-The surface is usually created by using the Marching-Cubes algorithm \parencite{Lorensen1987}, which works by assigning a scalar value to each voxel of the data (in our case the amplitude of the retrieved complex Bragg electronic density).
+The surface is usually created by using the Marching-Cubes algorithm \parencite{Lorensen1987}, which works by assigning a scalar value to each voxel of the data (in our case the amplitude of the retrieved complex electronic density).
 An iso-value which acts as a threshold is selected by the user, separating the volume of the particle from the rest.
 Finally, by \textit{marching} over the volume of the array, the algorithm derives a surface representation by assigning a configuration to each point in the array that depends on whether or not the 8 neighbouring cubes have values above or below the iso-value (fig. \ref{fig:MarchingCubes}).
 
@@ -265,8 +274,8 @@ Finally, by \textit{marching} over the volume of the array, the algorithm derive
     \label{fig:MarchingCubes}
 \end{figure}
 
-Crystallographic facets can be identified on the surface of the reconstructed object when studying faceted objects with a highly coherent beam \parencite{Richard2018}, allowing in-depth studies of facet dependent strain and displacement.
-Lattice strain and displacement are key information to retrieve during \textit{in-situ} and \textit{operando} experiments in fields such as heterogeneous catalysis \parencite{Ulvestad2016, Yau2017a, Kim2018, Fernandez2019, Abuin2019, Kim2019, Kawaguchi2019, Suzana2019, Choi2020, Passos2020,  Kim2021, Carnis2021, Dupraz2022} or electrochemistry \parencite{Ulvestad2015a, Bjorling2019, Vicente2021, Kawaguchi2021, Carnis2021b, Atlan2023}.
+Crystallographic facets can be identified on the surface of the reconstructed object when studying faceted objects with a highly coherent beam \parencite{Richard2018}, allowing in-depth studies of facet dependent strain and displacements.
+Lattice strain and displacements are key information to retrieve during \textit{in situ} and \textit{operando} experiments in fields such as heterogeneous catalysis \parencite{Ulvestad2016, Yau2017a, Kim2018, Fernandez2019, Abuin2019, Kim2019, Kawaguchi2019, Suzana2019, Choi2020, Passos2020,  Kim2021, Carnis2021, Dupraz2022} or electrochemistry \parencite{Ulvestad2015a, Bjorling2019, Vicente2021, Kawaguchi2021, Carnis2021b, Atlan2023}.
 
 Retrieving the facets can be achieved by analysing the probability distributions of the orientations of triangle normals on a mesh representation of the object \parencite{Grothausmann2012}.
 This method is used in the \textit{Paraview} plugin \textit{FacetAnalyser} \parencite{Grothausmann2015}, and yields a list of features detailed in tab. \ref{tab:facets}.
@@ -278,7 +287,7 @@ By tuning the kernel size and values, it is possible to be sensitive to boundari
 
 In this example, the FacetAnalyser plugin is used (fig. \ref{fig:FacetsParaview}).
 Note that the edges and corners of the reconstructed particle are also retrieved together as the voxels not belonging to any facets.
-The contribution from atomic edges and corners to those voxels, sites of particular interest for heterogeneous catalysis \parencite{Taylor1925}, depends on the spatial resolution of the experiment.
+The contribution from atomic edges and corners to those voxels, sites of particular interest for heterogeneous catalysis \parencite{Taylor1925}, depends on the spatial resolution of the experiment since averaged in the voxel size.
 The result depends on the algorithm input parameters, such as the minimum relative facet size, the angular acceptance for the facet normals, \textit{etc.}
 
 \begin{figure}
@@ -310,7 +319,7 @@ The result depends on the algorithm input parameters, such as the minimum relati
     \end{center}
     \caption{
     The output of \text{FacetAnalyser} is a list of values for each facet.
-    The accessible features are the facet size, the average strain and displacement (along the [111] direction), and the coordinates of the normal to the facet surface.
+    The accessible features are the facet size, the average strain and displacement (along the [111] direction, for the outermost voxel), and the coordinates of the normal to the facet surface.
     The uncertainty on the average displacement and strain corresponds to the standard deviation of the displacement and strain distribution, respectively.
     }
     \label{tab:facets}
