--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -1,6 +1,6 @@
-\section{SXRD} \label{sec:SXRD}
+\section{Surface x-ray diffraction} \label{sec:SXRD}
 
-Surface x-ray diffraction is a technique used to study the crystal structure and surface morphology of materials by analysing the diffraction pattern formed when x-rays interact with the surface of the material.
+Surface x-ray diffraction is a technique used to study the atomic structure and surface morphology of materials by analysing the diffraction pattern formed when x-rays interact with the surface of the material.
 In surface x-ray diffraction, the incident photon beam is directed towards the sample surface at a grazing angle of incidence to lower the penetration depth of the x-rays in the material, typically probing the top few atomic layers.
 The x-rays interact with the atoms in the topmost layer of the material and undergo scattering.
 The intensity of the scattered x-rays is then measured as a function of the scattering angle.
@@ -8,7 +8,7 @@ The incident angle can be chosen to coincide with the critical angle of the mate
 However, since the intensity becomes so dependent on the incident angle, a misalignment of the incident beam can lead to relevant errors in the scattered beam intensity, the surface alignment is critical during surface x-ray diffraction experiments.
 
 % By analyzing the diffraction pattern, which consists of intensity peaks at specific scattering angles, valuable information about the crystal structure and surface properties can be obtained.
-A typical experiments yields structure factors measured across the scattering space reachable with the instrument.
+A typical experiment yields structure factors measured across the scattering space reachable with the instrument.
 The positions and intensities of the diffraction peaks provide insights into the arrangement of atoms near the surface, surface reconstruction, crystallographic orientation, lattice strain, and the presence of surface defects.
 The aim of the technique is to obtain geometrical information of the surface at the atomic level, from surface symmetry to singular atomic displacements within the unit cell.
 
@@ -18,14 +18,15 @@ The aim of the technique is to obtain geometrical information of the surface at 
     \centering
     \includegraphics[width=\textwidth]{Figures/introduction/SurfaceReconstructions.pdf}
     \caption{
-    (a) Top view of the crystal surface, the last atomic layer (blue) does not have the same periodicity as the bulk layers (red).
-    (b) HK plane in the reciprocal space, diffraction peaks are represented as small red and blue dots for the bulk and surface reconstruction, respectively. The bulk reciprocal lattice is represented in grey.
+    (a) Top view of the crystal surface, the last atomic layer (green) does not have the same periodicity as the bulk layers (orange), but a (2x4) periodicity.
+    (b) HK plane in the reciprocal space, diffraction peaks are represented as small orange and green dots for the bulk and surface reconstruction, respectively. The bulk reciprocal lattice is represented in grey.
     }
     \label{fig:SurfaceReconstructions}
 \end{figure}
 
-An example of surface reconstructions is given in fig. \ref{fig:SurfaceReconstructions}, where the latest atomic layer (blue) does not have the same periodicity as the bulk layers (red).
+An example of surface reconstructions is given in fig. \ref{fig:SurfaceReconstructions}, where the latest atomic layer (green) does not have the same periodicity as the bulk layers (orange).
 This phenomenon gives rise to additional signals at positions defined by how the periodicity of the reconstruction relates to the periodicity of the bulk structure in the $\vec{a}$ and $\vec{b}$ directions (also named in-plane directions).
+The origin of this phenomenon can be linked to a different environment for surface atoms, in comparison with the bulk atoms \parencite{Robinson1983, Feidenhansl1989}.
 
 In this example, the surface reconstructions can be described using the \textit{Wood notation}, that quantifies the relation between the surface reconstruction unit vectors ($\vec{a}_r, \vec{b}_r$) and the bulk unit vectors ($\vec{a}, \vec{b}$) \parencite{Wood1964, Unertl1996, Goncharova2018}.
 Let us take the example of fig. \ref{fig:SurfaceReconstructions}, for which the orange atoms correspond to the Pt(100) surface.
@@ -59,25 +60,24 @@ When working with large single crystals for surface x-ray diffraction, the sampl
 In the real space, this can be mathematically described by the multiplication of the crystal lattice and a step-function, as illustrated in fig. \ref{fig:CTRConvolution}.
 The convolution theorem states that the Fourier transform of the multiplication of two functions is the convolution of their Fourier transforms \parencite{Mcalister2003}.
 The Fourier transform of the crystal lattice is the Lattice factor, when the Fourier transform of the step function is the inverse function $\frac{1}{q_z}$ \parencite{Andrews1985, Robinson1986}.
-This gives rise to a so called "rod" of intensity along the direction perpendicular to the truncated surface, a \textit{crystal truncation rod} (fig. \ref{fig:CTRConvolution}).
+This gives rise to a so called "rod" of intensity along the direction perpendicular to the truncated surface, a \textit{crystal truncation rod} (CTR - fig. \ref{fig:CTRConvolution}).
 
 $A(\vec{q})$ is here defined as the scattering amplitude of an infinite 2D layer of atoms, the scattering amplitude for a semi infinite stack of those layers in the $\vec{c}$ direction can be written as (adapted from eq. \ref{eq:LatFactor}):
 
 \begin{equation}
     \label{eq:CTR1}
-    F^{CTR} = A(\vec{q})\sum_{n=-\infty}^0 e^{in\vec{q}.\vec{c}} e^{-n\beta_{abs}} = \frac{A(\vec{q})}{1 - e^{in\vec{q}.\vec{c}} e^{-\beta_{abs}}}
+    F_{CTR} = A(\vec{q})\sum_{n=-\infty}^0 e^{in\vec{q}.\vec{c}} e^{-n\beta_{abs}} = \frac{A(\vec{q})}{1 - e^{in\vec{q}.\vec{c}} e^{-\beta_{abs}}}
 \end{equation}
 
 $\beta_{abs}$ is the absorption parameter.
-The intensity around a Bragg peak can then be written as a function of $q_z$, \textit{i.e.} the deviation from the Laue condition in $\vec{c}^*$.
-$q = q_z + l|\vec{c}^*|$, $l$ is the Miller index of the nearest Bragg peak.
+The intensity around a Bragg peak can then be written as a function of $q_z$, \textit{i.e.} the deviation from the Laue condition in $\vec{c}^*$, $q = q_z + l|\vec{c}^*|$, $l$ is the Miller index of the nearest Bragg peak.
 
 \begin{equation}
     \label{eq:CTR2}
-    I^{CTR} = |F^{CTR}|^2 = \frac{|A(\vec{q})|^2}{(1 - e^{in\vec{q}.\vec{c}} e^{-\beta_{abs}})(1 - e^{in\vec{q}.\vec{c}} e^{-\beta_{abs}})} \approx \frac{|A(\vec{q})|^2}{q_z^2 |\vec{c}|^2 + \beta_{abs}^2 }
+    I_{CTR} = |F_{CTR}|^2 = \frac{|A(\vec{q})|^2}{(1 - e^{in\vec{q}.\vec{c}} e^{-\beta_{abs}})(1 - e^{in\vec{q}.\vec{c}} e^{-\beta_{abs}})} \approx \frac{|A(\vec{q})|^2}{q_z^2 |\vec{c}|^2 + \beta_{abs}^2 }
 \end{equation}
 
-The amplitude of the signal between Bragg peaks in the reciprocal space becomes therefore proportional to $\frac{1}{q_z}$ in the $\vec{c}*$ direction and their amplitude to $\frac{1}{q_z^2}$.
+The amplitude of the signal between Bragg peaks in the reciprocal space becomes therefore proportional to $\frac{1}{q_z}$ in the $\vec{c}*$ direction and their intensity to $\frac{1}{q_z^2}$.
 This expression is only valid within the kinematical approach to diffraction.
 
 \begin{figure}[!htb]
@@ -103,23 +103,25 @@ The effect of roughness is illustrated in fig. \ref{fig:CTRSimulation}.
 This model only serves to describe the roughness of the bulk structure and does not function to describe the roughness of additional surface structures.
 
 In surface x-ray diffraction, lattice strain is defined as the displacement of the surface atomic layers with respect to the bulk unit cell lattice parameters.
-Positive or negative strain, also called surface relaxation when due to the minimisation of the surface energy from the presence of an ad-atom \parencite{Gupta1981}, has the effect of changing the position of the CTR minimum, and of skewing the shape of the CTR as illustrated in fig. \ref{fig:CTRSimulation}.
+Positive or negative strain, also called surface relaxation,
+% when due to the minimisation of the surface energy from the presence of an ad-atom \parencite{Gupta1981}
+has the effect of changing the position of the CTR minimum, and of skewing the shape of the CTR as illustrated in fig. \ref{fig:CTRSimulation}.
 
 Surface reconstructions also yield crystal truncation rods in the reciprocal space, perpendicular to the nodes of the reconstructed lattice, called super-structure rods (SSR).
-These rods are structured in $l$ if the width of the surface reconstruction in $\vec{c}$ is more than a few unit cells.
-Otherwise, the scattered signal corresponds to a diffuse signal slowly decreasing as a function of $l$ instead.
-To resume, analysing the scattered signal as a function of $L$ (out-of-plane measurements) yields information about the structure in the $\vec{c}$ direction, whereas analysing the position of the peaks in $[H, K]$ planes (in-plane measurements) yields information about the two-dimensional structure in the directions of $\vec{a}$ and $\vec{b}$.
+These rods are structured in $L$ if the width of the surface reconstruction in $\vec{c}$ is more than a few unit cells.
+Otherwise, the scattered signal corresponds to a diffuse signal slowly decreasing as a function of $L$ instead.
+To resume, analysing the scattered signal as a function of $L$ (out-of-plane measurements) yields information about the structure in the $\vec{c}$ direction, whereas analysing the position and intensity of the peaks in $[H, K]$ planes (in-plane measurements) yields information about the two-dimensional structure in the directions of $\vec{a}$ and $\vec{b}$.
 
 \subsection{Data collection} \label{sec:DataCollectionSXRD}
 
 Visualising how the measurements of the scattered x-rays is performed with a diffractometer can quickly become complicated in three dimensions.
-The Ewald sphere is a visual representation of the diffraction process used in crystallography to visualise and interpret the diffraction of x-rays by a single crystal.
+The Ewald sphere is a representation of the diffraction process used in crystallography to visualise and interpret the diffraction of x-rays by a single crystal.
 It is a geometric construction that represents the reciprocal space constructed from  the crystal lattice, centred at the origin of reciprocal space, and with a radius equal to the magnitude of the incident wavevector $\vec{k}_i$.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[trim=75 100 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereInPlane3D.png}
-    \includegraphics[trim=75 100 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereOutOfPlane3D.png}
+    \includegraphics[trim=75 150 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereInPlane3D.png}
+    \includegraphics[trim=75 150 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereOutOfPlane3D.png}
     \caption{
     Ewald sphere represented together with the reciprocal lattice before (green) and after (blue) rotating the sample to satisfy the Laue condition.
     The node of the reciprocal lattice that satisfies the Laue condition is in red.
@@ -132,7 +134,7 @@ It is a geometric construction that represents the reciprocal space constructed 
     \label{fig:EwaldSphere}
 \end{figure}
 
-The scattering vector $\vec{q}$ is determined by the incident and diffracted wavevectors,s and represents the difference between them (eq. \ref{eq:Q}).
+The scattering vector $\vec{q}$ is determined by the incident and diffracted wavevectors, and represents the difference between them (eq. \ref{eq:Q}).
 The Laue condition for a particular reflection is satisfied when the scattering vector lies on the surface of the Ewald sphere (fig. \ref{fig:EwaldSphere}), in other words, when the scattering vector corresponds to a point of intersection between the Ewald sphere and the reciprocal lattice points.
 
 \begin{figure}[!htb]
@@ -150,28 +152,28 @@ The Laue condition for a particular reflection is satisfied when the scattering 
 \end{figure}
 
 The Ewald sphere is represented in fig. \ref{fig:EwaldSphere} to highlight how the diffraction angles can be tuned to satisfy the Laue condition.
-Let us take the example of a diffractometer in a horizontal setup (fig. \ref{fig:Diffractometer} - in red), $\omega$ and $\beta$ (rotation around $\vec{x}$ of the entire setup) are respectively the in-plane and out-of-plane rotation angles of the sample when $\gamma$ and $\delta$ are the in-plane and out-of-plane rotation angles of the detector.
+Let us take the example of a diffractometer in a horizontal setup (fig. \ref{fig:Diffractometer} - in red), $\omega$ and $\beta$ (rotation around $\vec{z}$ of the entire setup) are respectively the in-plane and out-of-plane rotation angles of the sample when $\gamma$ and $\delta$ are the in-plane and out-of-plane rotation angles of the detector.
 The Laue condition is satisfied by rotating the reciprocal space, which is performed by rotating the sample (the reciprocal space rotates jointly with the atomic lattice).
-The detection of the scattered x-rays by the detector is then attained by placing the detector in the direction of the scattering wavevector $\vec{k}_f$.
+The detection of the scattered x-rays by the detector is then attained by placing the detector in the direction of the scattering wavevector $\vec{k}_s$.
 
 For in-plane measurements, the Laue condition is fulfilled by rotating the in-plane sample angle $\omega$ to the Bragg angle.
-The detector in-plane angle $\gamma$ must then be equal to $\gamma = 2 \omega$ to measure the scattered x-rays in the direction of the scattering wavevector $\vec{k}_f$(fig. \ref{fig:EwaldSphere} - a).
+The detector in-plane angle $\gamma$ must then be equal to $\gamma = 2 \omega$ to measure the scattered x-rays in the direction of the scattering wavevector $\vec{k}_s$ (fig. \ref{fig:EwaldSphere} - a).
 The incident angle between $\vec{k}_i$ and the sample must be kept to low values, in the case of out-of-plane measurements, this brings some important constraints about the experiment geometry.
-For example, the $(0, 0, L)$ crystal truncation rod becomes impossible to measure, for other rods (e.g. $(0, 1, L)$, fig. \ref{fig:EwaldSphere} - b), the sample must be rotated in plane so that the top of the Ewald sphere intersect the rod in the reciprocal space \parencite{Vlieg1997, Schleputz2005}.
+For example, the $(0, 0, L)$ crystal truncation rod becomes impossible to measure, for other rods (e.g. $(0, 1, L)$, fig. \ref{fig:EwaldSphere} - b), the sample must be rotated in plane so that the top of the Ewald sphere intersects the rod in the reciprocal space \parencite{Vlieg1997, Schleputz2005}.
 
 As one can imagine from fig. \ref{fig:EwaldSphere} - b, there is a maximum value $l_{max}$ that can be reached until the radius of the Ewald sphere becomes too low to ever intersects the rod in the reciprocal space, which depends on the incoming photon wavelength and on the crystal lattice.
-Furthermore, when for low $l$ values the detector is in the vertical plane, for high $l$ values the detector is almost parallel to the sample which limits the sampling of the reciprocal space.
-These experimental limitations are at the origin of how far in $l$ the CTR can be measured, details about the experimental limitations and corrections factor for the measurement of crystal truncation rods can be found in Vlieg et al. \parencite*{Vlieg1997}, Drnec et al. \parencite*{Drnec2014}.
+Furthermore, when for low $L$ values the detector is in the vertical plane, for high $L$ values the detector is almost parallel to the sample which limits the sampling of the reciprocal space.
+These experimental limitations are at the origin of how far in $L$ the CTR can be measured, details about the experimental limitations and corrections factor for the measurement of crystal truncation rods can be found in Vlieg et al. \parencite*{Vlieg1997}, Drnec et al. \parencite*{Drnec2014}.
 High-energy surface x-ray diffraction \parencite{Gustafson2014, Harlow2020, Hejral2021} has the potential to counter that limitation since the radius of the Ewald sphere increases, which simplifies the experimental setup to some extent.
 
 The integrated intensity of a Bragg peak in photons/second, coming from a perfectly collimated monochromatic beam on a small crystal of $N$ unit cells, neglecting absorption effects, can be expressed as follows \parencite{NielsenMcMorrow}:
 
 \begin{gather}
     \label{eq:ScatteredIntensity}
-    I_{sc} = \Phi r_0^2 P |F(\vec{q})|^2 \frac{V_s}{V_c} \times L(\lambda, \theta)
+    I_{sc} = \Phi r_0^2 P |F_{crystal}(\vec{q})|^2 \frac{V_s}{V_c} \times L(\lambda, \theta)
     % L(\lambda, \theta) = \frac{\lambda^3}{v_c}\frac{1}{sin(2\theta)}
 \end{gather}
-$\Phi$ is the incoming photon flux, $P$ the polarisation factor, $F(\vec{q})$ the structure factor, $V_s$ is the scattering volume and $V_c$ the volume of the unit cell.
+$\Phi$ is the incoming photon flux, $P$ the polarisation factor, $F_{crystal}(\vec{q})$ the structure factor of the crystal, $V_s$ is the scattering volume and $V_c$ the volume of the unit cell.
 
 The last term in eq. \ref{eq:ScatteredIntensity} is called the Lorentz factor, and is related to how the scattered intensity is integrated around the Bragg peak due to the distortion of the intensity distribution in the angular space.
 The Lorentz factor changes depending on how the data integration is performed \parencite{Robach2000, Drnec2014}.
@@ -184,14 +186,14 @@ Moreover, in the case of crystals that are larger than the beam-footprint, illum
 \subsection{X-ray reflectivity}\label{sec:XRR}
 
 To perform a measurement perpendicular to $[H, K] = [0, 0]$ in the horizontal geometry, $\beta$ must be tuned together with the out-of-plane angle of the detector $\delta$ (fig. \ref{fig:EwaldSphereSpecular}).
-This kind of measurement is called \textit{specular} measurement, for which the direction of the scattering vector is only perpendicular to the surface, yielding information about the material density only in the direction perpendicular to the surface.
+This kind of measurement is called \textit{specular} measurement, for which the direction of the scattering vector is only perpendicular to the surface, yielding information about the material electronic density only in the direction perpendicular to the surface.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[trim=75 100 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereSpecular3D.png}
+    \includegraphics[trim=75 150 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereSpecular3D.png}
     \caption{
     Ewald sphere represented together with the reciprocal lattice before (green) and after (blue) rotating the sample to satisfy the Laue condition.
-    Measurements in the specular direction is performed by simultaneously rotating the in-plane sample angle $\beta$ while the rotation of the in-plane detector angle $\delta$ follows the relation $\delta=2\beta$.
+    Measurements in the specular direction is performed by simultaneously rotating the out-of-plane sample angle $\beta$ while the out-of-plane detector angle $\delta$ follows the relation $\delta=2\beta$.
     }
     \label{fig:EwaldSphereSpecular}
 \end{figure}
