--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -9,7 +9,7 @@ The duality between wave and particles was first mentioned by Max Planck and Alb
 \end{equation}
 
 Electromagnetic waves, \textit{i.e.} light or photons can be characterised by their energy $E$ in \unit{\eV} and wavelength $\lambda$ in \unit{\meter}. $p$ corresponds to the momentum transfer.
-The conversion between is realised thanks to Planck's constant $h = \qty{6.626e-34}{\joule.\second}$ and the speed of light in vacuum $c = \qty{2.9979e8}{\meter.\per \second}$ (eq. \ref{eq:EnergyLambda}).
+The conversion between is realised thanks to Planck's constant $h = \qty{6.626e-34}{\joule.\second}$ and the speed of light in vacuum $c = \qty{2.9979e8}{\meter.\per \second}$:
 
 \begin{equation}
     \label{eq:EnergyLambda}
@@ -36,7 +36,7 @@ $\Lambda_p$ is the attenuation length in \unit{\meter}, \textit{i.e.} the length
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{Figures/introduction/cross_sections.pdf}
+    \includegraphics[width=0.66\textwidth]{Figures/introduction/cross_sections.pdf}
     \caption{
         Cross-sections for platinum (Z=78) corresponding to different processes occurring when photons interact with matter.
         Data taken from the NIST (National Institute of Standards and Technology) \parencite{NIST_cross_sections} website.
@@ -48,7 +48,7 @@ $\Lambda_p$ is the attenuation length in \unit{\meter}, \textit{i.e.} the length
 Compton scattering, also named inelastic scattering, is a process during which some of the incident electromagnetic wave energy is transferred to the atoms' electrons.
 This results in a lower energy for the scattered photon (and therefore a higher wavelength) compared to the incident photon.
 
-In the frame of this thesis, the (elastic) Thomson scattering cross-sections is the most important, at the origin of x-ray diffraction.
+In the frame of this thesis, the (elastic) Thomson scattering cross-section is the most important, at the origin of x-ray diffraction.
 This process is dominant for energies below \qty{200}{\keV}, in the x-ray regime, together with photoelectric absorption.
 
 \subsubsection{Scattering from an electron}
@@ -56,22 +56,12 @@ This process is dominant for energies below \qty{200}{\keV}, in the x-ray regime
 This discussion of x-ray scattering begins by considering scattering from a single free electron using classical electromagnetic theory.
 During elastic scattering, the oscillating electric field of the incident x-ray wave exerts an electromagnetic force on the electron, causing it to accelerate and oscillate in the same direction as the incident electronic field.
 
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[trim=0 75 0 25, clip, width=\textwidth]{Figures/introduction/torus.pdf}
-    \caption{
-        Effect of relation between synchrotron x-ray polarisation $\hat{\epsilon}$ and scattered x-ray polarisation $\hat{\epsilon}'$ on the scattered field.
-        The scattered field intensity is attenuated by a $\cos{(\theta)}$ factor, where $\theta$ is the angle between the plane perpendicular to the electric field and the direction of observation $\vec{R}$ (b)
-    }
-    \label{fig:polarization_effect}
-\end{figure}
-
 During an elastic scattering event, the oscillating electron emits a spherical electromagnetic wave with the same wavelength as the incident beam (Thomson scattering).
 The scattered field $\vec{E}_{scatt}$ is then proportional to the incident electromagnetic field $\vec{E}_{in}$ as follows \parencite{NielsenMcMorrow}:
 
 \begin{equation}
     \label{eq:scatt_field}
-    \frac{\vec{E}_{scatt}(R, \, t)} {\vec{E}_{in}} = -r_0 \frac{e^{\vec{k}.\vec{R}}} {|\vec{R}|}| \hat{\epsilon}.\hat{\epsilon}'|
+    \frac{|\vec{E}_{scatt}(R, \, t)|} {|\vec{E}_{in}|} = -r_0 \frac{e^{\vec{k}.\vec{R}}} {|\vec{R}|}| \hat{\epsilon}.\hat{\epsilon}'|
 \end{equation}
 $|\vec{R}|$ is the distance at which the scattering is detected at the time $t$, $\hat{\epsilon}$ and $\hat{\epsilon}'$ are respectively the polarisation vectors of the incident and scattered electromagnetic fields.
 The minus sign illustrates a phase shift of $\pi$ between the incident and scattered wave, $r_0$ is the Thomson scattering length or the classical radius of the electron defined as:
@@ -96,13 +86,23 @@ The polarisation factor $P$ for scattered beams is defined as $P =  | \hat{\epsi
     \frac{d\sigma_{ts}} {d \Omega} = r_0^2 | \hat{\epsilon}.\hat{\epsilon}'|^2 = r_0^2 P
 \end{equation}
 
-The effect of the polarisation of the incident beam is illustrated in figure \ref{fig:polarization_effect}.
-At synchrotrons, working in the vertical plane ($\vec{x}, \vec{z}$) is preferable to maximise the intensity of the scattered field.
+The effect of the polarisation of the incident beam is illustrated in figure \ref{fig:PolarisationEffect}.
+At synchrotrons, where the incident beam has a horizontal polarisation, working in the vertical plane ($\vec{x}, \vec{z}$) is preferable to maximise the intensity of the scattered field.
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{Figures/introduction/torus.pdf}
+    \caption{
+        Effect of relation between synchrotron x-ray polarisation $\hat{\epsilon}$ and scattered x-ray polarisation $\hat{\epsilon}'$ on the scattered field.
+        The scattered field intensity is attenuated by a $\cos{(\theta)}$ factor, where $\theta$ is the angle between the plane perpendicular to the electric field and the direction of observation $\vec{R}$.
+    }
+    \label{fig:PolarisationEffect}
+\end{figure}
 
 The total cross-section for the scattering event by a single free electron can be computed by integrating the differential cross-section over all the possible scattering angles, \textit{i.e.} by averaging all possible polarisation directions \parencite{Willmott}.
 This yields $\sigma_{ts} = 8 \pi r_0^2 /3 = \qty{0.665}{\barn}$, (\qty{1}{barn} is equal to \qty{e-28}{\m^2}).
 The total Thomson scattering cross-section is constant, independent of the incoming photon energy.
-This results holds for x-rays for which the scatterer \textit{i.e.} the electron can be considered as free \parencite{Willmott}.
+This result holds for x-rays for which the scatterer \textit{i.e.} the electron can be considered as free \parencite{Willmott}.
 
 \subsubsection{Scattering from a single atom}\label{sec:scattering}
 
@@ -119,12 +119,12 @@ To describe the phase of the scattered field, which depends on the phase of each
 
 \begin{equation}
     \label{eq:Q}
-    \vec{q}=\vec{k}_i-\vec{k}_s.
+    \vec{q}=\vec{k}_s-\vec{k}_i.
 \end{equation}
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[scale=0.6]{Figures/introduction/q.pdf}
+    \includegraphics[scale=0.5]{Figures/introduction/q.pdf}
     \caption{
     Geometry of the scattering vector $\vec{q}$ in reciprocal space, $2\theta$ is the scattering angle.
     The magnitude of the scattering vector can be derived from the scattering angle $\theta$ that draws a line cutting $\vec{q}$ at $|\vec{q}|/2$.
@@ -134,7 +134,7 @@ To describe the phase of the scattered field, which depends on the phase of each
 
 The phase difference between a wave scattered at a position $O$ and a wave scattered at a distance $\vec{r}$ from $O$ is equal to $(\vec{k}_i - \vec{k}_s).\vec{r} = \vec{q}.\vec{r}$ (fig. \ref{fig:q} - Jens Als-Nielsen \cite*{NielsenMcMorrow}).
 
-From fig. \ref{fig:q}, and the relation between wavevector and wavelength ($k = 2 \pi/\lambda$), the scattering vector can be written as a function of the wavelength of the incident beam $\lambda$, and of the direction of detection defined by the scattering angle $2\theta$ (eq. \ref{eq:QSinTheta}).
+From fig. \ref{fig:q}, and the relation between wavevector and wavelength ($k = 2 \pi/\lambda$), the scattering vector modulus can be written as a function of the wavelength of the incident beam $\lambda$, and of the direction of detection defined by the scattering angle $2\theta$ (eq. \ref{eq:QSinTheta}).
 % between the wavevector of the incident photon $\vec{k}_i$ and the wavevector of the scattered photon $\vec{k}_s$.
 Is it assumed here that the scattering event is elastic ($|\vec{k}_i|=|\vec{k}_s|$), and that the waves are plane waves parallel to each other when in the small scattering volume $d^3\vec{r}$.
 
@@ -153,7 +153,7 @@ The total contribution of one atom to the scattered field in the direction of th
 
 The scattering amplitude as a function of $\vec{q}$ is described by the atomic from factor $f^0(\vec{q})$, which is defined as the Fourier transform of the atomic electronic density $\rho_{atom}(\vec{r})$ \parencite{Paganin}.
 The values for the atomic from factor can be approximated by a sum of Gaussians using tabulated coefficients (eq. \ref{eq:AtomicFormFactorTab}) available online \parencite{InterTablesOfCryst}.
-It decreases with $\vec{q}$ (or $\sin(\theta) / \lambda)$ as illustrated in figure \ref{fig:atomic_form_factor}.
+It decreases with $\vec{q}$ (or $\sin(\theta) / \lambda)$ as illustrated in figure \ref{fig:AtomicFormFactor}.
 
 \begin{equation}
     \label{eq:AtomicFormFactorTab}
@@ -167,11 +167,13 @@ This difference in scattering intensity between elements becomes crucial when wo
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{Figures/introduction/atomic_form_factor.pdf}
+    \includegraphics[width=0.75\textwidth]{Figures/introduction/atomic_form_factor.pdf}
     \caption{
-    Atomic form factor calculated for platinum (Z=78) using tabulated values \parencite{InterTablesOfCryst} for equation \ref{eq:AtomicFormFactor}. The scattering intensity decreases with the scattering angle $\theta$ but increases with the incident wavelength $\lambda$. $i$ and $c$ respectively designate the Gaussian contribution and constant in eq. \ref{eq:AtomicFormFactorTab}.
+    Atomic form factor calculated for platinum (Z=78) using tabulated values \parencite{InterTablesOfCryst} for equation \ref{eq:AtomicFormFactor}.
+    See \url{http://lampx.tugraz.at/~hadley/ss1/crystaldiffraction/atomicformfactors/formfactors.php}.
+    The scattering intensity decreases with the scattering angle $\theta$ but increases with the incident wavelength $\lambda$. $i$ and $c$ respectively designate the Gaussian contribution and constant in eq. \ref{eq:AtomicFormFactorTab}.
     }
-    \label{fig:atomic_form_factor}
+    \label{fig:AtomicFormFactor}
 \end{figure}
 
 \subsection{Refraction, reflection and absorption effects}\label{sec:RefractionReflectionAbsorption}
@@ -179,7 +181,7 @@ This difference in scattering intensity between elements becomes crucial when wo
 For now, the electron has been considered as free.
 However, electrons in atoms or molecules exist in discrete bound states (characterised by a binding energy $E_b$), and their response to the incoming electromagnetic field becomes dependent on the incoming energy.
 In a classical point of view, the bound electron can be reconsidered as a damped harmonic oscillator with associated resonant frequencies $\omega_b$ corresponding to the electron's binding energy.
-First, when approaching the binding energy, the amplitude of the electron's oscillation are reduced and so is the atomic form factor by a real energy-dependant factor $f'(\hbar\omega)$.
+First, when approaching the binding energy, the amplitude of the electron's oscillation is reduced and so is the atomic form factor by a real energy-dependant factor $f'(\hbar\omega)$.
 Secondly, the oscillation of the scattering electron experiences a phase lag.
 This is taken into account by introducing an imaginary energy-dependent factor $f''(\hbar\omega)$.
 The atomic form factor $f^0(\vec{q})$ must therefore be corrected by these two correction factors, the total atomic form factor $f(\vec{q}, \hbar\omega)$ is defined as follows \parencite{NielsenMcMorrow}:
@@ -225,7 +227,7 @@ The kinetic energy of the electrons released from the material in the latter sce
 \end{equation}
 
 Measuring the kinetic energy of the photoelectron that escaped the material yields direct information about the different binding energies present in the material, \textit{i.e.} about its electronic structure.
-The study of these binding/kinetic energies is known as x-ray photoelectron spectroscopy (XPS), a technique used in this thesis to study the electronic structure of the atoms within the topmost atomic layers of the catalyst.
+The study of these binding/kinetic energies is at the origin of x-ray photoelectron spectroscopy (XPS), a technique used in this thesis to study the electronic structure of the atoms within the topmost atomic layers of the catalyst.
 Electrons released from atoms in deep layers are ultimately absorbed by the surrounding atoms.
 The cross-section for XPS is directly proportional to the absorption cross-section $\sigma_a$ (eq. \ref{eq:AbsorptionCrossSection}, fig. \ref{fig:cross_sections}) which can be derived from the imaginary atomic form factor:
 
@@ -325,7 +327,7 @@ The direction perpendicular to the $(hkl)$ plane is written as $[hkl]$, the dist
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[scale=0.6]{Figures/introduction/BraggLaw.pdf}
+    \includegraphics[scale=0.5]{Figures/introduction/BraggLaw.pdf}
     \caption{
     The difference in the path length (in red) between plane waves scattered at an angle $\theta$ is equal to $2d_{hkl} \sin{\theta}$.
     This distance must be an integer multiple of the wavelength for constructive interference to occur.
@@ -400,7 +402,7 @@ The superposition of these sinusoidal waves, representing the diffraction peaks 
 To summarise, the diffraction peaks in the scattering pattern represent the Fourier components of the crystal's electron density distribution.
 Their spatial frequencies and phase relationships carry information about the crystal structure.
 The structure factor $F_{uc}$ is the summation of the contribution of each atom $j$ at the position $\vec{r}_j$ in the unit cell, of atomic form factor $f_j(\vec{q})$, and for a given scattering vector $\vec{q}$.
-The position of each atom is defined in the unit cell by eq. \ref{eq:AtomPos}, an example with the platinum atoms in its primitive unit cell is given in tab. \ref{tab:PtAtoms}.
+The position of each atom is defined in the unit cell by eq. \ref{eq:AtomPos}, an example with the platinum atoms is given in tab. \ref{tab:PtAtoms}.
 
 \begin{equation}
     \label{eq:AtomPos}
@@ -422,7 +424,7 @@ The position of each atom is defined in the unit cell by eq. \ref{eq:AtomPos}, a
 
 Systematic extinctions ($F_{uc} = 0$) occur when certain diffraction peaks are forbidden due to the crystal's symmetry elements, such as the atomic positions.
 For example in the FCC lattice of platinum, systematic extinctions occur when the value of Miller indices are not all even or all odds.
-Otherwise, the intensity of a Bragg peak detected at the scattering vector $\vec{q}$ is equal to $4\times f_{Pt}(\vec{q})$ where $f_{Pt}(\vec{q})$ is the atomic scattering factor of platinum.
+Otherwise, the amplitude of a Bragg peak detected at the scattering vector $\vec{q}$ is equal to $4\times f_{Pt}(\vec{q})$ where $f_{Pt}(\vec{q})$ is the atomic scattering factor of platinum.
 
 \subsection{Lattice factor} \label{sec:LatticeFactor}
 
@@ -430,25 +432,25 @@ If the scattering factor considers the composition of the unit cell, the lattice
 It takes into account the arrangement of atoms or scatterers within the crystal lattice, and their interaction with the incident wave.
 
 By considering the different parts of eq. \ref{eq:Fcrystal} and eq. \ref{eq:FcrystalFlatFuc}, the lattice factor is now identified and discussed (eq \ref{eq:LatFactor}).
-In the case of a simple cubic arrangement of unit cells in three directions perpendicular to each other, the sum over all unit cells $N_{uc}$ in the crystal is simplified into three sums, each in one of the directions of the crystal lattice ($\vec{a}, \, \vec{b}, \, \vec{c}$), verifying $N_{uc} = N_{uc, x} \times N_{uc, y} \times N_{uc, z}$.
+In the case of a simple cubic arrangement of unit cells in three directions perpendicular to each other, the sum over all unit cells $N_{uc}$ in the crystal is simplified into three sums, each in one of the directions of the crystal lattice ($\vec{a}_x, \, \vec{a}_y, \, \vec{a}_z$), verifying $N_{uc} = N_{uc, x} \times N_{uc, y} \times N_{uc, z}$.
 
 \begin{gather}
     \label{eq:LatFactor}
-    F_{lat} = \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R}_k} = \sum_{n_x}^{N_{uc, x}} e^{i n_x\vec{q}.\vec{a}} \times \sum_{n_y}^{N_{uc, y}} e^{i n_y\vec{q}.\vec{b}} \times \sum_{n_y}^{N_{uc, z}} e^{i n_y\vec{q}.\vec{c}}\\
+    F_{lat} = \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R}_k} = \sum_{n_x}^{N_{uc, x}} e^{i n_x\vec{q}.\vec{a}_x} \times \sum_{n_y}^{N_{uc, y}} e^{i n_y\vec{q}.\vec{a}_y} \times \sum_{n_z}^{N_{uc, z}} e^{i n_z\vec{q}.\vec{a}_z}\\
     F_{lat} = \prod_{j=\{x,y,z\}} \Bigg( \sum_{n_j}^{N_{uc, j}} e^{i n_j\vec{q}.\vec{a}_j} \Bigg)\\
     F_{lat} = \prod_{j=\{x,y,z\}} S_{N_{uc, j}}(\vec{q}.\vec{a}_j)
 \end{gather}
 
 \begin{gather}
     \label{eq:SFunction1}
-    S_{N_{uc, j}}(\vec{q}.\vec{a}_j) = \sum_{n_j}^{N_{uc, j}} e^{in\vec{q}.\vec{a}_j} = \sum_{n_j}^{N_{uc, j}} e^{(i\vec{q}.\vec{a}_j)^{n_j}} = \frac{1-e^{(i N_{uc, j} \vec{q}.\vec{a}_j)}}{1-e^{(i\vec{q}.\vec{a}_j)}} \\
+    S_{N_{uc, j}}(\vec{q}.\vec{a}_j) = \sum_{n_j}^{N_{uc, j}} e^{in_j\vec{q}.\vec{a}_j} = \sum_{n_j}^{N_{uc, j}} e^{(i\vec{q}.\vec{a}_j)^{n_j}} = \frac{1-e^{(i N_{uc, j} \vec{q}.\vec{a}_j)}}{1-e^{(i\vec{q}.\vec{a}_j)}} \\
     \label{eq:SFunction2}
     |S_{N_{uc, j}}(\vec{q}.\vec{a}_j)| = \frac{\sin(N_{uc, j} \vec{q}.\vec{a}_j/2)}{\sin(\vec{q}.\vec{a}_j/2)} \\
     \label{eq:SFunction3}
     |S_{N_{uc, j}}(\vec{q}.\vec{a}_j)| \underset{N_{uc, j} \to \infty}{\longrightarrow} \approx \delta (\vec{q})
 \end{gather}
 
-Where $S_{N_{uc, j}}(\vec{q}.\vec{a})$ is a function whose modulus tends towards a Dirac function when $N_{uc, j} \longrightarrow \infty$.
+Where $S_{N_{uc, j}}(\vec{q}.\vec{a}_j)$ is a function whose modulus tends towards a Dirac function when $N_{uc, j} \longrightarrow \infty$.
 The condition to observe maxima in eq. \ref{eq:SFunction2} is for the denominator to be equal to zero: $\frac{\vec{q}.\vec{a}_j}{2} = \pi$ which brings us back to the Laue condition: $\vec{q} = \vec{G}$ where $\vec{G}$ is a reciprocal space lattice vector (eq. \ref{eq:LaueCond}).
 Minor peaks appear when the numerator is equal to one: $N_{uc, j}\frac{\vec{q}.\vec{a}_j}{2} \equiv \frac{\pi}{2}$.
 The distance between each minor peak in $q$-space is given by $\Delta q = \frac{2\pi}{N_{uc, j} \times a_j} = \frac{2\pi}{t_j}$, where $t_j$ is the thickness of the crystal in the direction $\vec{a_j}$.
@@ -458,6 +460,8 @@ For a large crystal (\textit{i.e.} a large number of unit cells in three directi
 For small crystals such as nanoparticles, the fringes of the lattice factor will be further apart and their intensity more visible in contrast to the intensity of the main peak (fig. \ref{fig:3DDP}).
 In a more general sense, the lattice factor is the Fourier transform of the crystal's lattice, the effect of the Fourier transform is that fringes will be visible in the reciprocal space in directions perpendicular to the crystal's surface.
 The ability to effectively sample these fringes during experiments is at the root of the BCDI technique, to effectively retrieve the crystal shape (sec. \ref{sec:BCDI}).
+Moreover, the lattice factor also explains the existence of intensity rods in reciprocal space, used to probe the structure of the related surfaces with surface x-ray diffraction (sec. \ref{sec:SXRD}).
+% ajouter SXRD
 
 \subsection{Coherence} \label{sec:Coherence}
 
@@ -468,9 +472,9 @@ The brilliance $\mathcal{B}$ is a measure of the distribution of flux in both sp
     \mathcal{B} = \frac{\unit{\photons \per \second}}{(\unit{\mm^2} \text{source area})(\unit{\milli\radian})^2(\qty{0.1}{\percent} \; \text{bandwidth})}
 \end{equation}
 
-The spectral flux, on the other hand, quantifies the number of photons passing through a defined area per unit bandwidth per second.
-Synchrotron facilities aim to optimise both the photon flux and brilliance, a higher flux meaning faster experiments whereas a high brilliance is important for those that need a coherent beam.
-In the last evolution from $3^{rd}$ to $4^{th}$ generation synchrotrons, the source size (convolution of the size of the photon source and the transverse size of the electron beam) has been reduced by an order of magnitude \parencite{Willmott}.
+The spectral flux, on the other hand, quantifies the number of photons passing through a defined area per second.
+Synchrotron facilities aim to optimise both the photon flux and brilliance, a higher flux meaning faster experiments, whereas a high brilliance can for example be important for those that need a coherent beam.
+In the last evolution from $3^{rd}$ to $4^{th}$ generation synchrotrons, the source size (convolution of the size of the photon source and the transverse size of the electron beam) has been reduced by an order of magnitude in the horizontal direction \parencite{Willmott}.
 
 \begin{equation}
     \label{eq:Emittance}
@@ -480,7 +484,8 @@ The emittance $\epsilon$ is defined as the product of the source size $D$ and th
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[scale=0.8]{Figures/introduction/coherence_lengths.pdf}
+    % \includegraphics[scale=0.8]{Figures/introduction/coherence_lengths.pdf}
+    \includegraphics[width=\textwidth]{Figures/introduction/CoherenceLengths.pdf}
     \caption{
     (a) Two waves become out of phase in the direction of the beam at a distance $L_L$ from being in phase after $N/2$ wavelengths for $\lambda$ and $(N+1)/2$ wavelengths for $\lambda - \Delta\lambda$. Since $N >> 1$, $N\approx\lambda/\Delta\lambda$, which yields eq. \ref{eq:LongitudinalCoL}.
     (b) A plane wave emitted from one extremity of the source is out of phase with another plane wave emitted from the other extremity with maximum angular divergence $\Delta\theta$, at a distance $L_T$ in the plane perpendicular to the direction of the beam, situated at a distance $R$ from the source.
@@ -522,6 +527,7 @@ Indeed, to be able to resolve the interference fringes resulting from the lattic
 
 \textit{
 This introduction is limited to the kinematical approach of diffraction, which means that the scattering is weak, so that multiple scattering can be ignored.
+This is explained by the size of the samples, e.g. surfaces and nanoparticles.
 This allows us to assume that the sample is only a perturbation to the incident field, and that the structure factor can be written as the Fourier transform of the electronic density (Born approximation).
 It is also assumed that the incident wave is plane within the scattering volume, and that the distance between the scatterer and the detector is large enough for the scattered waves to be considered planes (far-field or Fraunhofer regime).
 }
