--- a/Sections/5_Conclusion/Conclusion.tex
+++ b/Sections/5_Conclusion/Conclusion.tex
@@ -1,24 +1,133 @@
-\section{Research aim}
+\section{Research aim and results}
 
+This thesis was partly aimed at demonstrating the importance of combining different synchrotron techniques to understand, \textit{operando}, the evolution of catalysts surfaces during ammonia oxidation.
+To do so, mainly three techniques have been used, Bragg coherent diffraction imaging, surface x-ray diffraction, and x-ray spectroscopy, combined with mass spectrometry measurements.
+These techniques are compatible with near-ambient pressure experiments, allowing to reduce the pressure gap in heterogeneous catalysis.
+To bridge the material gap, Pt nanoparticles and single crystals were used.
+Throughout this work, low \ce{O_2}/\ce{NH_3} ratios and temperatures were linked with selectivity towards \ce{N_2}, whereas high \ce{O_2}/\ce{NH_3} ratios and temperatures were linked to an increased selectivity towards \ce{NO} and \ce{N_2O}.
+This is consistent with the reaction selectivity reported for industrial catalysts, which supports the use of nanoparticles and single crystals as model catalysts to improve their understanding.
+
+Pt nanoparticles epitaxied on sapphire were first measured at \qtylist{300;500;600}{\degreeCelsius} with SXRD during ammonia oxidation, starting with the introduction of ammonia in the reactor, and followed by a progressive increase of the oxygen pressure (\ce{O_2}/\ce{NH_3} = \{0, 0.5, 1, 2, 8\}).
+The average shape of the Pt nanoparticles is highly faceted, consisting of \{111\}, \{110\}, \{100\} and \{113\} facets.
+A progressive reshaping of the nanoparticles was revealed at \qty{600}{\degreeCelsius} during reacting conditions.
+Once \ce{O_2}/\ce{NH_3} = 1, and for increasing oxygen to ammonia ratios, the \{110\} and \{113\} facets surface coverage decreases, replaced by \{111\}, and \{100\} facets.
+
+A single nanoparticle was then imaged with BCDI under inert atmosphere, at temperatures between \qtylist{25;600}{\degreeCelsius}.
+A defect present at the interface from room temperature to \qty{125}{\degreeCelsius} was successfully removed by flash annealing above \qty{800}{\degreeCelsius}.
+This defect was shown to have an impact of the thermal relaxation of the particle.
+The \{111\} facets close to the interface evolve between \{211\}, \{221\} and \{110\} facets as a function of the sample temperature, and interfacial strain.
+The introduction of ammonia in the reactor at \qty{600}{\degreeCelsius} resulted in the creation of an interfacial defect network, together with a reversal of the facet strain, highlighting the link between facet and interfacial strain in nanoparticles.
+
+Two different nanoparticles were then measured at \qtylist{300;400}{\degreeCelsius} during ammonia oxidation.
+Different behaviours were revealed on the two nanoparticles, that exhibit a different size, shape, facet coverage, and initial strain state.
+The surface of the larger nanoparticle (particle \textit{C}, \qty{800}{\nm} wide) is constituted by  \{111\}, \{110\}, and \{100\} facets.
+Particle \textit{C} showed a reversible decrease/increase of homogeneous strain when ammonia was introduced/removed from the reactor, and could not be reconstructed without it.
+A non-reversible increase in heterogeneous strain was measured at \qty{300}{\degreeCelsius} when first exposing the sample to reacting condition (\ce{O_2}/\ce{NH_3} = 0.5), no such increase was reproduced at the same conditions at \qty{400}{\degreeCelsius}.
+
+The increase of homogeneous strain linked to the presence/absence of ammonia was not reproduced on the second nanoparticle, particle \textit{B}, \qty{300}{\nm} wide, and with \{113\} facets also present on its surface.
+A non-reversible increase of heterogeneous strain was also measured at \qty{300}{\degreeCelsius}, but induced by the presence of ammonia, without oxygen.
+The possibility of having an oxidised sample can explain this evolution under a reducing atmosphere, but is not observed for particle \textit{C}.
+The appearance of a defect at \qty{400}{\degreeCelsius} was linked to a non-reversible and important increase of homogeneous strain during the oxidation of ammonia, which further increased as a function of the \ce{O_2}/\ce{NH_3} ratio.
+This structural evolution is clearly visible in 3D by the missing pipes of Bragg electronic density, induced by the presence of dislocations, that could have a prominent role in the catalyst strain field and thus catalytic properties.
+A global activation of the catalyst at \qtylist{300;400}{\degreeCelsius} was reported while the \ce{O_2}/\ce{NH_3} ratio was kept equal to 2, with an increased production of \ce{NO}, and in a lesser extent \ce{N2O}, at the detriment of \ce{N2}.
+% Such an activation was not measured under similar conditions on a sample with a higher particle coverage, used during SXRD experiments.
+
+To better understand the role of each facet in the structural behaviour of the Pt nanoparticles, SXRD and XPS experiments were carried out at \qty{450}{\degreeCelsius} on Pt(111) and Pt(100) single crystals.
+The samples were first exposed to high oxygen atmosphere (\qty{80}{\milli\bar}) to oxidise the Pt surfaces (total pressure always kept to \qty{500}{\milli\bar} by the use of argon for SXRD).
+Two different oxygen to ammonia ratios are used after surface oxidation, by first introducing \qty{10}{\milli\bar} of ammonia (\ce{O_2}/\ce{NH_3} = \num{8}), and then reducing the oxygen pressure to \qty{5}{\milli\bar} (\ce{O_2}/\ce{NH_3} = \num{0.5}).
+The XPS experiment was performed with the same ammonia to oxygen ratios, but at lower partial pressure (approximately \qty{10}{\percent}).
+
+The oxidation of both surfaces is first discussed.
+Different islands of Bulk \ce{Pt_3O_4} were identified on Pt(100), of mean thickness equal to \qty{16}{\angstrom} (\textit{i.e.} 3 unit cells thick).
+Signals shifted in reciprocal space in comparison to the \ce{Pt_3O_4} peaks are also measured.
+Both the \ce{Pt_3O_4} and shifted peaks were measured \qty{1}{\hour} after the introduction of oxygen, but could not be detected under a reduced oxygen atmosphere (\qty{5}{\milli\bar}), even after a few hours of measurements.
+Transient signals are measured instead, underlying the importance of the oxygen pressure in the surface oxidation.
+A Pt(111)-(8x8)-R\ang{0} commensurate superstructure was clearly identified after \qty{9}{\hour}\qty{30}{\minute} of elapsed time under high oxygen atmosphere, and after \qty{23}{\hour}\qty{30}{\minute} under reduced oxygen atmosphere.
+From the shape of the related out-of-plane signal, this structure was determined to be a few layers thick.
+Additional in-plane signals are also detected as soon as oxygen is introduced in the reactor (for both pressures), the intensity of those signals decreases once the Pt(111)-(8x8)-R\ang{0} structure is present, which supports a precursor link between both structures.
+Moreover, when describing the second structure with the Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0} matrix, which results in a real space angle of \ang{137.4}, a second-order signal is shared.
+Signals measured in the XPS O 1s level at reduced oxygen atmosphere and attributed to surface oxygen species are more important for Pt(100) than Pt(111), showing that Pt(100) surface is more readily oxidised than Pt(111).
+Oxidation of Pt(111) and Pt(100) was linked to increased surface roughness, and to compressive out-of-plane strain with respect to inert atmosphere for Pt(111).
+
+Different behaviours were measured on both surfaces during reacting conditions.
+Under high \ce{O_2}/\ce{NH_3} ratio, which favours the production of \ce{NO}, surface oxides are directly removed from Pt(111), but reconstruct with a p(10x10) arrangement on Pt(100).
+Oxygen species signals in the O 1s level are weak for Pt(111), difficult to dissociate from the background, whereas peaks can still be resolved for Pt(100).
+The reconstruction of the Pt(100) surface is linked to the persisting presence of surface oxygen species during ammonia oxidation, thereby differing from the Pt(111) surface.
+Moreover, the selectivity towards \ce{NO} is more important on the Pt(100) surface, also linked to the more importance presence of surface oxygen, which is crucial in the production of \ce{NO} during the reaction mechanism.
+The difference in surface oxygen presence cannot be linked to competition between both reagents since already observed during surface oxidation.
+A high roughness is also observed during this condition for both surfaces.
+
+Pt(111) and Pt(100) show a similar selectivity towards \ce{N_2} when lowering the \ce{O_2}/\ce{NH_3} ratio to \num{0.5}.
+The magnitude of the out-of-plane strain, and the surface roughness, are already reduced in this condition for Pt(111), but stay at similar values for Pt(100).
+On both surfaces, oxygen species are absent from the O 1s level, and adsorbed atomic nitrogen is measured, linked to the Pt(100)-p(33x25)-R\ang{0} hexagonal surface superstructure for Pt(100).
+Adsorbed ammonia is also observed on Pt(111).
+
+The difference in out-of-plane strain when lowering the \ce{O2}/\ce{NH3} ratio is in the same order of magnitude, but of different nature, \qty{\approx 0.06}{\percent} tensile / compressive strain on Pt(100) /  Pt(111).
+Most importantly, the strain is contained on the topmost layers of the platinum catalysts.
+If one considers a Pt(100) surface voxel \qty{10}{\nm} thick, the corresponding averaged voxel strain would be equal to \qty{0.002}{\percent} with respect to the bulk lattice.
+Therefore, the change of strain between reacting conditions becomes difficult to resolve, which can explain why no differences are observed on particle \textit{C} during ammonia oxidation.
+Another factor to take into account is the increased surface roughness linked to high oxygen pressure, which has the effect of decreasing the intensity of the scattered photons far from the Bragg peak, and will thus reduce the experimental resolution.
+Additional high-resolution studies are necessary to make sure that such a change of strain can be detected, and correlated to the catalyst adsorption properties.
+
+% From SXRD results, it is clear that the \{111\} and \{100\} facets are expected to have different structural evolution during the reaction as a function of the \ce{O2}/\ce{NH3} ratio.
+% For example, the difference in strain between both reacting conditions is clear when only ammonia is present in the reactor
+% Maybe due to pre oxidation of the surface, not same temperature
+% However, no such effect was observed on particle \textit{C}, for which \qty{10}{\percent} of the surface is occupied by \{100\} facets, and \qty{35}{\percent} of the surface by \{111\} facets.
+% Particle \textit{B} has the same coverage of \{100\} and \{111\} facets, but with additionally \num{4} times more surface occupied by \{110\} facets (\qty{23}{\percent} vs \qty{6}{\percent}), and \{113\} facets, not present on particle \textit{B}.
+% The difference of behaviour between the two nanoparticles during ammonia oxidation can only correctly be addressed with SXRD and XPS data for all facets.
+% It is otherwise difficult to decorrelate the impact of defects on the particles adsorption properties due from the presence of \{113\} facets.
+% or 110 facets also not the same coverage
+% Nevertheless, an important difference in selectivity was observed with surface techniques, linked to surface oxidation.
+% Future studies must be able to resolve the importance of structural defects and oxide formation at high pressure during the reaction.
+% The insight gained from SXRD will help pilot future BCDI experiments on Pt nanoparticles.
+
+% First and foremost, this series of experiments has put into evidence the importance of combining complementary techniques together with different samples when studying heterogeneous catalysis.
+
+The thesis demonstrates the importance of combining structural measurements at both the individual particle and particle assembly levels.
+With Bragg coherent diffraction imaging (BCDI), we have demonstrated that depending on the morphology (aspect ratio, facets, etc) of the Pt particles, the structure (strain, morphology, defects) evolves differently during the ammonia oxidation.
+The need for statistical analysis by measuring multiple individual particles (statistics) appears mandatory for a comprehensive understanding of the structure-activity relationship.
+Nanoparticles serve as a very interesting platform to explore the simultaneous structural evolution of diverse crystallographic facets at once.
+It is noteworthy that the strain at the particle/support interface seems to exert a pronounced influence on the reaction.
+It is then also interesting to measure monocristals to decouple the impact of e.g. interfacial strain from the crystallographic orientation of facets on catalytic reactions.
 
 \section{Perspectives}
+% pt rh study ?
+% Resolve CTR from facets
 
-Thus, it is not possible to determine the potential influence of the oxide thickness on the catalyst activity.
-Nevertheless, since no bulk oxide can be measured under reacting conditions,
+% Measuring different Bragg peaks corresponding to the substrate at each temperature, together with CTRs recorded in the direction perpendicular to the substrate could have provided a better idea of the interfacial structure.
+% However, as discussed in the previous section, it is complicated to differ the contribution of the CTRs linked to the substrate surface from those linked to the (111) and ($\bar{1}\bar{1}\bar{1}$) nanoparticle surface.
+% Additional simulations of the particle equilibrium shape and the impact of interfacial defects can provide a better understanding of the structural dynamics at work.
 
-Additional measurements with first different exposition times to a pure oxygen atmosphere (while monitoring the thickness of the \ce{Pt_3O_4} layer), and secondly introducing ammonia in the reactor while comparing the product partial pressure could bring an answer to the role of \ce{Pt_3O_4} during ammonia oxidation.
+Most importantly, this thesis has demonstrated the importance of bridging the material gap, by combining model catalysts with samples approaching the shape of industrial samples.
+The structure evolution of Pt nanoparticles was shown to strongly depend on their size, shape, facet coverage and initial strain state.
+The ammonia oxidation, which posses at least four different products, and a selectivity dependant on the reagent ratio, working temperature, and total pressure, draws a multi-dimensional parameter space only correctly addressed with information of different nature.
 
-The main drawback of this error-metric is that each voxel is given the same weight, if this assumption is not a problem when working near the Bragg peak, $4^{th}$ generation synchrotron that possess a higher flux make it possible to sample the signal in region further away from the Bragg peak.
+BCDI has proven to be powerful, but limited by the reconstruction process, as well as the time needed to find and image isolated nanoparticles.
+Significant progress has already been made at the European synchrotron at the ID01 beamline, where rocking curves can be acquired in less than minutes.
+\textit{Operando} measurements have proven to be complex, Pt nanoparticles detaching from the substrate at \qty{600}{\degreeCelsius} under reacting conditions, and sample environments failing during SXRD measurements.
+Closing the pressure gap can be achieved for SXRD and BCDI by designing reactors resistant to highly oxidising atmosphere, and in this case, compatible with the ammonia/nitrogen oxide gas family, often banned due to their corrosive and toxic nature.
+Future experiments must be performed at industrial condition to be relevant, the importance of total pressure was demonstrated in this thesis with e.g. oxide formation on Pt(100) at \qty{80}{\milli\bar} and not at \qty{5}{\milli\bar}.
+Simpler reaction cycles (e.g. by reducing the amount of \ce{O2}/\ce{NH3} ratios) will also help reduce the complexity of the data analysis.
+A future reaction cycle is proposed.
+First exposing the sample to increased oxygen pressure will reduce the time needed to detect potentially relevant oxides, as showcased here with the detection time of the Pt(111)-(8x8)-R\ang{0} structure, divided by \num{2.5} under \qty{80}{\milli\bar} of oxygen compared to \qty{5}{\milli\bar}.
+A significant thickness of those platinum oxides could also be sufficient to be detected during BCDI experiments, especially now that the corresponding interplanar spacings are clearly determined.
+Their impact of the facet strain in BCDI could then be determined by reconstructing the 3D strain tensor.
+Higher oxygen pressure may reveal a role of platinum oxides during ammonia oxidation, invisible at lower pressure.
+This will also remove the unknown regarding initial oxidised/contaminated states when introducing ammonia.
+Ending the reaction cycle by having only ammonia in the reactor is also at the origin of large strain variations measured with SXRD, that could be more easily detected with BCDI.
+In the future, surface x-ray experiments on Pt(110) and Pt(113) samples will add to our knowledge, and help better understand the structural behaviour of Pt nanoparticles.
+
+Nevertheless, experimentally resolving the role of interfacial strain \textit{operando} could be performed by e.g. (i) exposing a nanoparticle that possesses an interfacial defect to reacting atmosphere, (ii) subsequently removing this defect by annealing, and (iii) repeating the exposition to reacting condition to observe a potential difference in the facet strain.
+However, a certain control of the initial particle strain is needed.
+The development of efficient simulation workflows to understand and de-correlate the effect of interfacial strain from adsorbant strain is also part of the solution.
+The development of x-ray techniques that can bring higher statistics in the study of individual nanoparticles must be pushed forward.
+In this scope, x-ray Bragg ptychography is a technique that should receive increased interest since the measurement process provides less constraints, and a unique solution.
+
+The upgrade of synchrotrons is of key importance to efficiently navigate between different temperatures/pressures/reagent ratios.
+A reduced counting time will help catch transient structures with SXRD, while increased photon count will increase the possibility to detect weak second and third order signals.
+Reaction cycles could also be reproduced to increase the results significance, while changing the steps order.
+Furthermore, a software upgrade is also needed, the surface x-ray diffraction community lacks an efficient and complete software combining data reduction and analysis.
+For BCDI, the development of \textit{Gwaihir} was undertaken to respond to such needs from the community.
+Additional work may address the data reduction automatisation by developing error-metrics for phase retrieval, methods to find the best solution, automatic facet detection in Python, \textit{etc}.
+This would largely reduce the data reduction time, facilitating the analysis of multiple particles at various conditions.
 A detailed study of the impact of trying to improve the image resolution by increasing the distance from the centre of the Bragg peak by combining simulations and experimental reconstructions would be of great interest to the community to understand the impact of the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ approximation.
-
-Know the oxide at reacting conditions ? metastable, or depending on the path
-
-relaxation sous ammoniac, ok avec meilleure reconstruction de particule D6
-
-also mention the facet evolution probed by sxrd
-
-311 type facets
-
-in situ and operando here, very cool
-
-Mention bragg ptychography to probe several nanoparticles together
